commit translated contents

--- a/docs/code-quality/c26818.md
+++ b/docs/code-quality/c26818.md
@@ -7,35 +7,35 @@ f1_keywords:
 helpviewer_keywords:
 - C26818
 no-loc:
-- default
-- int
-- char
-ms.openlocfilehash: d2288e4674b2efd53d3cc3fa482081d7b7225e12
-ms.sourcegitcommit: c382ab448008e74c23b9a703f3b78b8120b391e1
+- ':::no-loc(default):::'
+- ':::no-loc(int):::'
+- ':::no-loc(char):::'
+ms.openlocfilehash: 834b7f1a6429d99ef8c87dd60951f50d969326a2
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/24/2020
-ms.locfileid: "82139507"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87226086"
 ---
 # <a name="c26818"></a>C26818
 
-> L'istruzione switch non copre tutti i casi. Prendere in considerazione l'defaultaggiunta di un'etichetta '' (es. 79).
+> L'istruzione switch non copre tutti i casi. Prendere in considerazione l'aggiunta di un' :::no-loc(default)::: etichetta '' (es. 79).
 
 ## <a name="remarks"></a>Osservazioni
 
-Questo controllo copre l'etichetta **default** mancante nelle istruzioni switch che passano su un tipo non di enumerazione, ad esempio **int**, **char** e così via.
+Questo controllo copre l' **`:::no-loc(default):::`** etichetta mancante nelle istruzioni switch che passano su un tipo non di enumerazione, ad esempio **`:::no-loc(int):::`** , **`:::no-loc(char):::`** e così via.
 
-Per ulteriori informazioni, vedere [es. 79: utilizzare default per gestire i casi comuni (solo)](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#es79-use-default-to-handle-common-cases-only) nell'linee guida di base di C++.
+Per ulteriori informazioni, vedere [es. 79: utilizzare :::no-loc(default)::: per gestire i casi comuni (solo)](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#es79-use-:::no-loc(default):::-to-handle-common-cases-only) nell'linee guida di base di C++.
 
 ## <a name="example"></a>Esempio
 
-Questo esempio presenta un'etichetta **default** mancante durante il cambio di **int** un oggetto.
+Questo esempio presenta un' **`:::no-loc(default):::`** etichetta mancante durante il cambio di un oggetto **`:::no-loc(int):::`** .
 
 ```cpp
 void fn1();
 void fn2();
 
-void foo(int a)
+void foo(:::no-loc(int)::: a)
 {
     switch (a)
     {
@@ -51,14 +51,14 @@ void foo(int a)
 
 ## <a name="solution"></a>Soluzione
 
-Per risolvere il problema, inserire un' **default** etichetta per coprire tutti i case rimanenti.
+Per risolvere il problema, inserire un' **`:::no-loc(default):::`** etichetta per coprire tutti i case rimanenti.
 
 ```cpp
 void fn1();
 void fn2();
-void default_action();
+void :::no-loc(default):::_action();
 
-void foo(int a)
+void foo(:::no-loc(int)::: a)
 {
     switch (a)
     {
@@ -68,20 +68,20 @@ void foo(int a)
         case 2:
             fn2();
             break;
-        default:
-            default_action();
+        :::no-loc(default)::::
+            :::no-loc(default):::_action();
             break;
     }
 }
 ```
 
-Se non default è necessario eseguire alcuna azione, inserire un'etichetta **default** vuota per indicare che gli altri case non sono stati dimenticati.
+Se non :::no-loc(default)::: è necessario eseguire alcuna azione, inserire un' **`:::no-loc(default):::`** etichetta vuota per indicare che gli altri case non sono stati dimenticati.
 
 ```cpp
 void fn1();
 void fn2();
 
-void foo(int a)
+void foo(:::no-loc(int)::: a)
 {
     switch (a)
     {
@@ -91,7 +91,7 @@ void foo(int a)
         case 2:
             fn2();
             break;
-        default:
+        :::no-loc(default)::::
             // do nothing for the rest of the cases
             break;
     }
