--- a/docs/cpp/m128.md
+++ b/docs/cpp/m128.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m128 keyword [C++]
 ms.assetid: e51a472a-0e3c-4989-9a2a-36adb05273a3
-ms.openlocfilehash: c21353448116f47b1e9c5ec1726cee04ee8318d9
-ms.sourcegitcommit: 857fa6b530224fa6c18675138043aba9aa0619fb
+ms.openlocfilehash: 9568e1fa1e0bc2fffed5e9f33b0f99dfcb955551
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/24/2020
-ms.locfileid: "80188656"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87225956"
 ---
 # <a name="__m128"></a>__m128
 
-**Sezione specifica Microsoft**
+**Specifico di Microsoft**
 
-Il tipo di **dati __m128** , da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions e Streaming SIMD Extensions 2, è definito in \<xmmintrin. h >.
+Il tipo di **dati __m128** , da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions e Streaming SIMD Extensions 2, è definito in \<xmmintrin.h> .
 
 ```cpp
 // data_types__m128.cpp
@@ -29,13 +29,13 @@ int main() {
 
 ## <a name="remarks"></a>Osservazioni
 
-Non è consigliabile accedere direttamente ai campi **__m128** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128** esegue il mapping ai registri XMM [0-7].
+Non è consigliabile accedere **`__m128`** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **`__m128`** esegue il mapping ai registri XMM [0-7].
 
-Le variabili di tipo **__m128** vengono allineate automaticamente nei limiti di 16 byte.
+Le variabili di tipo **`__m128`** vengono allineate automaticamente nei limiti di 16 byte.
 
-Il tipo di dati **__m128** non è supportato nei processori ARM.
+Il **`__m128`** tipo di dati non è supportato nei processori ARM.
 
-**Fine sezione specifica Microsoft**
+**TERMINA specifica Microsoft**
 
 ## <a name="see-also"></a>Vedere anche
 
