--- a/docs/cpp/m128d.md
+++ b/docs/cpp/m128d.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m128d keyword [C++]
 ms.assetid: 8082c7c0-a955-4b53-9d82-9bb91c623f72
-ms.openlocfilehash: c88a30b399882c3cb749f677c2406706ceca3f6c
-ms.sourcegitcommit: 857fa6b530224fa6c18675138043aba9aa0619fb
+ms.openlocfilehash: d1cbbd8f3f92e8bea3c599815c0a261d16305f85
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/24/2020
-ms.locfileid: "80178029"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87225943"
 ---
 # <a name="__m128d"></a>__m128d
 
-**Sezione specifica Microsoft**
+**Specifico di Microsoft**
 
-Il tipo di dati **__m128d** , da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions 2, è definito in \<emmintrin. h >.
+Il **`__m128d`** tipo di dati, da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions 2, è definito in \<emmintrin.h> .
 
 ```cpp
 // data_types__m128d.cpp
@@ -29,13 +29,13 @@ int main() {
 
 ## <a name="remarks"></a>Osservazioni
 
-Non è consigliabile accedere direttamente ai campi **__m128d** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128** esegue il mapping ai registri XMM [0-7].
+Non è consigliabile accedere **`__m128d`** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **`__m128`** esegue il mapping ai registri XMM [0-7].
 
 Le variabili di tipo **_m128d** vengono allineate automaticamente nei limiti di 16 byte.
 
-Il tipo di dati **__m128d** non è supportato nei processori ARM.
+Il **`__m128d`** tipo di dati non è supportato nei processori ARM.
 
-**Fine sezione specifica Microsoft**
+**TERMINA specifica Microsoft**
 
 ## <a name="see-also"></a>Vedere anche
 
