--- a/docs/cpp/m128i.md
+++ b/docs/cpp/m128i.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m128i keyword [C++]
 ms.assetid: bd245d68-862c-46dd-9903-6c67c7c5dbcd
-ms.openlocfilehash: fb3cb8d2d25577487d503196b05a61312d070773
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 2f6356158776141d5a0f7686138fcf7255c72013
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81374058"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87225930"
 ---
 # <a name="__m128i"></a>__m128i
 
 **Specifico di Microsoft**
 
-Il tipo di dati **__m128i,** da utilizzare con le funzioni intrinseche delle \<istruzioni SSE2 (Streaming SIMD Extensions 2), è definito in emmintrin.h>.
+Il **`__m128i`** tipo di dati, da utilizzare con gli intrinseci delle istruzioni Streaming SIMD Extensions 2 (SSE2), è definito in \<emmintrin.h> .
 
 ```cpp
 // data_types__m128i.cpp
@@ -29,16 +29,16 @@ int main() {
 
 ## <a name="remarks"></a>Osservazioni
 
-Non accedere direttamente **ai campi __m128i.** È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m128i** esegue il mapping ai registri XMM[0-7].
+Non è consigliabile accedere **`__m128i`** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **`__m128i`** esegue il mapping ai registri XMM [0-7].
 
-Le variabili di tipo **__m128i** vengono allineate automaticamente ai limiti di 16 byte.
+Le variabili di tipo **`__m128i`** vengono allineate automaticamente nei limiti di 16 byte.
 
 > [!NOTE]
-> L'utilizzo di variabili di tipo **__m128i** causerà la generazione dell'istruzione SSE2 `movdqa` da parte del compilatore. Questa istruzione non causa un guasto ai processori Pentium III, ma `movdqa` si tradurrà in un guasto silenzioso, con possibili effetti collaterali causati da qualsiasi istruzione si traduce in processori Pentium III.
+> Se si usano variabili di tipo **`__m128i`** , il compilatore genererà l' `movdqa` istruzione SSE2. Questa istruzione non causa un errore sui processori Pentium III, ma comporterà un errore invisibile all'utente, con possibili effetti collaterali causati da tutte le istruzioni `movdqa` convertite in su processori Pentium III.
 
-Il **tipo di** dati __m128i non è supportato nei processori ARM.
+Il **`__m128i`** tipo di dati non è supportato nei processori ARM.
 
-**FINE Specifico di Microsoft**
+**TERMINA specifica Microsoft**
 
 ## <a name="see-also"></a>Vedere anche
 
