--- a/docs/cpp/m64.md
+++ b/docs/cpp/m64.md
@@ -6,18 +6,18 @@ f1_keywords:
 helpviewer_keywords:
 - __m64 keyword [C++]
 ms.assetid: df0410e8-67c9-4954-88c8-fe2653575252
-ms.openlocfilehash: 3a78ef07239a5af3cee480f3fd369acf5f947f46
-ms.sourcegitcommit: 857fa6b530224fa6c18675138043aba9aa0619fb
+ms.openlocfilehash: 7b99104acfd25c58ddd706885f0dca0a57a4390e
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/24/2020
-ms.locfileid: "80178002"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87225917"
 ---
 # <a name="__m64"></a>__m64
 
-**Sezione specifica Microsoft**
+**Specifico di Microsoft**
 
-Il tipo di dati **__m64** è da usare con MMX e 3DNow! le funzioni intrinseche e sono definite in \<> xmmintrin. h.
+Il **`__m64`** tipo di dati è da usare con MMX e 3DNow! gli intrinseci e sono definiti in \<xmmintrin.h> .
 
 ```cpp
 // data_types__m64.cpp
@@ -30,13 +30,13 @@ int main()
 
 ## <a name="remarks"></a>Osservazioni
 
-Non è consigliabile accedere direttamente ai campi **__m64** . È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **__m64** viene mappata ai registri mm [0-7].
+Non è consigliabile accedere **`__m64`** direttamente ai campi. È comunque possibile visualizzare i seguenti tipi nel debugger. Una variabile di tipo **`__m64`** esegue il mapping ai registri mm [0-7].
 
 Le variabili di tipo **_m64** vengono allineate automaticamente nei limiti di 8 byte.
 
-Il tipo di dati **__m64** non è supportato nei processori x64. Le applicazioni che usano __m64 come parte di intrinseci MMX devono essere riscritte per usare intrinseci SSE e SSE2 equivalenti.
+Il **`__m64`** tipo di dati non è supportato nei processori x64. Le applicazioni che usano __m64 come parte di intrinseci MMX devono essere riscritte per usare intrinseci SSE e SSE2 equivalenti.
 
-**Fine sezione specifica Microsoft**
+**TERMINA specifica Microsoft**
 
 ## <a name="see-also"></a>Vedere anche
 
