--- a/docs/code-quality/c26408.md
+++ b/docs/code-quality/c26408.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - C26408
 ms.assetid: 55b0706f-1107-41c1-8ad0-c9e1e86a3b8c
-ms.openlocfilehash: 0a167d40c443863dd6607614f6b33ed1e47e31b9
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 61ce5b4eea726aaa6a65ab196c6aec381f5f33fd
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417213"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87226125"
 ---
 # <a name="c26408-no_malloc_free"></a>C26408 NO_MALLOC_FREE
 
-Questo avviso contrassegna i punti in cui `malloc` o `free` vengono richiamati in modo esplicito in base a R. 10: evitare `malloc` e `free`. Una possibile correzione per tali avvisi può essere l'uso di [std:: make_unique](/cpp/standard-library/memory-functions#make_unique) per evitare la creazione e la distruzione esplicite di oggetti. Se questa correzione non è accettabile, è consigliabile preferire Operator [New ed Delete](/cpp/cpp/new-and-delete-operators) . In alcuni casi, se le eccezioni non sono benvenute, `malloc` e `free` possono essere sostituite dalla versione nothrow degli operatori `new` e `delete`.
+Questo avviso contrassegna il punto `malloc` in cui o `free` viene richiamato in modo esplicito in base a R. 10: evitare `malloc` e `free` . Una possibile correzione per tali avvisi può essere l'uso di [std:: make_unique](/cpp/standard-library/memory-functions#make_unique) per evitare la creazione e la distruzione esplicite di oggetti. Se questa correzione non è accettabile, è consigliabile preferire Operator [New ed Delete](/cpp/cpp/new-and-delete-operators) . In alcuni casi, se le eccezioni non sono benvenute `malloc` e `free` possono essere sostituite con la versione nothrow degli operatori `new` e `delete` .
 
 ## <a name="remarks"></a>Osservazioni
 
-- Per rilevare malloc () si verifica se una chiamata richiama una funzione globale con il nome "malloc" o "STD:: malloc". La funzione deve restituire un puntatore a `void` e accettare un parametro di tipo integrale senza segno.
+- Per rilevare malloc () si verifica se una chiamata richiama una funzione globale con il nome "malloc" o "STD:: malloc". La funzione deve restituire un puntatore a **`void`** e accettare un parametro di tipo integrale senza segno.
 
-- Per rilevare Free (), le funzioni globali vengono controllate con i nomi "Free" o "STD:: Free" che non restituiscono alcun risultato e accettano un parametro, che è un puntatore a `void`.
+- Per rilevare Free (), le funzioni globali vengono controllate con i nomi "Free" o "STD:: Free" che non restituiscono alcun risultato e accettano un parametro, che è un puntatore a **`void`** .
