--- a/docs/code-quality/c26409.md
+++ b/docs/code-quality/c26409.md
@@ -7,21 +7,21 @@ f1_keywords:
 helpviewer_keywords:
 - C26409
 ms.assetid: a3b3a229-d566-4be3-bd28-2876ccc8dc37
-ms.openlocfilehash: 8d4145691e95452faa70d086691ec5ca88aef593
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 6795c82b5b45d8ddb588365a69c2b5a41922a0f7
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418361"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87226112"
 ---
 # <a name="c26409-no_new_delete"></a>NO_NEW_DELETE C26409
 
 Anche se il codice è pulito dalle chiamate a malloc () e Free (), è comunque consigliabile considerare opzioni migliori rispetto all'utilizzo esplicito di Operators [New e Delete](/cpp/cpp/new-and-delete-operators).
 
-  Linee guida di base: [R. 11: evitare di chiamare nuovi ed eliminare in modo esplicito](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r11-avoid-calling-new-and-delete-explicitly) **C++**
+  **Linee guida di base di C++**: [R. 11: evitare la chiamata di New e DELETE in modo esplicito](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r11-avoid-calling-new-and-delete-explicitly)
 
 La correzione finale consiste nell'iniziare a usare i puntatori intelligenti con le funzioni Factory appropriate, ad esempio [std:: make_unique](/cpp/standard-library/memory-functions#make_unique).
 
 ## <a name="remarks"></a>Osservazioni
 
-- Il controllo Avvisa in caso di chiamate a qualsiasi tipo di operatore `new` o `delete`: scalare, vettore, versioni di overload (globali e specifiche della classe), nonché nelle versioni di selezione host. Il secondo caso potrebbe richiedere chiarimenti sulle linee guida di base in termini di correzioni suggerite e potrebbe essere omesso in futuro.
+- Il controllo Avvisa in caso di chiamate a qualsiasi tipo di operatore **`new`** o **`delete`** : scalare, vettore, versioni di overload (globali e specifiche della classe), nonché nelle versioni di selezione host. Il secondo caso potrebbe richiedere chiarimenti sulle linee guida di base in termini di correzioni suggerite e potrebbe essere omesso in futuro.
