--- a/docs/code-quality/c26448.md
+++ b/docs/code-quality/c26448.md
@@ -6,28 +6,28 @@ f1_keywords:
 - C26448
 helpviewer_keywords:
 - C26448
-ms.openlocfilehash: 96f364dadc0e5b29181313a7902f807ef1995d16
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 2b33bfb84bdd491fba48495584e2d455c4eaedbf
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417010"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87226099"
 ---
-# <a name="c26448-use_gsl_finally"></a>C26448 USE_GSL_FINALLY
+# <a name="c26448-use_gsl_finally"></a>USE_GSL_FINALLY C26448
 
-Prendere in considerazione l'uso di `gsl::finally` se l'azione finale è intenzionale.
+Provare a usare `gsl::finally` se l'azione finale è intenzionale.
 
-C++Linee guida di base: [GSL. util: Utilities](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-utilities)
+Linee guida di base di C++: [GSL. util: Utilities](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#SS-utilities)
 
-La libreria di supporto delle linee guida fornisce un'utile utilità per implementare il concetto di *azione finale* . Poiché il C++ linguaggio non supporta i costrutti **try-finally** , è diventato comune implementare tipi di pulizia personalizzati che potrebbero richiamare azioni arbitrarie per la distruzione. L'utilità `gsl::finally` è implementata in questo modo e fornisce un modo più uniforme per eseguire le azioni finali in una codebase.
+La libreria di supporto delle linee guida fornisce un'utile utilità per implementare il concetto di *azione finale* . Poiché il linguaggio C++ non supporta i costrutti **try-finally** , è diventato comune implementare tipi di pulizia personalizzati che potrebbero richiamare azioni arbitrarie per la distruzione. L' `gsl::finally` utilità è implementata in questo modo e fornisce un modo più uniforme per eseguire le azioni finali in una codebase.
 
-Esistono anche casi in cui le azioni finali vengono eseguite in una modalità di tipo C obsoleta usando istruzioni **goto** , che in genere sono sconsigliate da [C26438 NO_GOTO](c26438.md)). È difficile rilevare l'intenzione esatta nel codice che usa molto **goto**, ma alcune euristiche possono aiutare a trovare candidati migliori per la pulizia.
+Esistono anche casi in cui le azioni finali vengono eseguite in una modalità di tipo C obsoleta usando le **`goto`** istruzioni, che in genere sono sconsigliate da [C26438 NO_GOTO](c26438.md)). È difficile rilevare l'intenzione esatta nel codice usato molto **`goto`** , ma alcune euristiche possono aiutare a trovare candidati migliori per la pulizia.
 
 ## <a name="remarks"></a>Osservazioni
 
 - Questa regola è molto leggera e usa nomi di etichetta per indovinare le opportunità di usare gli oggetti azione finali.
 - I nomi di etichetta che possono generare un avviso contengono parole come "end", "Final", "clean" e così via.
-- Gli avvisi vengono visualizzati nelle istruzioni **goto** . È possibile che venga visualizzato un output dettagliato in alcune occasioni, ma ciò può essere utile per definire la priorità del codice a seconda della complessità.
+- Gli avvisi vengono visualizzati nelle **`goto`** istruzioni. È possibile che venga visualizzato un output dettagliato in alcune occasioni, ma ciò può essere utile per definire la priorità del codice a seconda della complessità.
 - Questa regola viene sempre associata a [C26438 NO_GOTO](c26438.md). A seconda delle priorità, una di queste può essere disabilitata.
 
 ## <a name="example-cleanup-with-multiple-goto-statements"></a>Esempio: pulizia con più istruzioni GOTO
