--- a/docs/code-quality/c6273.md
+++ b/docs/code-quality/c6273.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6273
 ms.assetid: e780e504-8b8d-4d61-b15f-4859133134ad
-ms.openlocfilehash: 1753165d723b2867e4694ff4a8c6f7217aadfbd4
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 396cda3ae19782db1914e7c7bdc81f9a77c9ec0c
+ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420258"
+ms.lasthandoff: 07/27/2020
+ms.locfileid: "87226073"
 ---
 # <a name="c6273"></a>C6273
 
-> avviso C6273-non integer passato come parametro \<numero > quando è necessario un numero intero nella chiamata a \<funzione >: se viene passato un valore di puntatore, è necessario utilizzare% p
+> avviso C6273-non integer passato come parametro \<number> quando è necessario un numero intero nella chiamata a \<function> : se viene passato un valore di puntatore, è necessario utilizzare% p
 
-Questo avviso indica che la stringa di formato specifica un numero intero, ad esempio, una `%d`, una specifica di lunghezza o di precedenza per `printf` ma un valore non Integer, ad esempio `float`, stringa o `struct` viene passato come parametro. È probabile che questo difetto provochi un output non corretto.
+Questo avviso indica che la stringa di formato specifica un numero intero, ad esempio, una `%d` specifica di lunghezza o di precedenza per `printf` ma un valore non Integer, ad esempio un oggetto **`float`** , una stringa o **`struct`** che viene passato come parametro. È probabile che questo difetto provochi un output non corretto.
 
 ## <a name="example"></a>Esempio
 
-Il codice seguente genera questo avviso perché è necessario un numero intero anziché un `float` per `sprintf`funzione:
+Il codice seguente genera questo avviso perché è necessario un valore integer anziché un **`float`** per `sprintf` funzionare:
 
 ```cpp
 #include <stdio.h>
@@ -52,7 +52,7 @@ void f_corrected()
 }
 ```
 
-Il codice seguente usa la funzione di manipolazione delle stringhe sicura, `sprintf_s`, per correggere il problema:
+Il codice seguente usa la funzione Safe String Manipulation, `sprintf_s` , per correggere l'avviso:
 
 ```cpp
 #include <stdio.h>
@@ -71,4 +71,4 @@ Questo avviso non è applicabile a Windows 9x e Windows NT versione 4 perché% p
 
 ## <a name="see-also"></a>Vedere anche
 
-[sprintf, _sprintf_l, swprintf, _swprintf_l, \__swprintf_l](/cpp/c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l)
+[sprintf, _sprintf_l, swprintf, _swprintf_l, \_ _swprintf_l](/cpp/c-runtime-library/reference/sprintf-sprintf-l-swprintf-swprintf-l-swprintf-l)
