--- a/docs/code-quality/c6262.md
+++ b/docs/code-quality/c6262.md
@@ -7,22 +7,22 @@ f1_keywords:
 helpviewer_keywords:
 - C6262
 ms.assetid: 3eddc74e-2b05-4159-a093-fd469fdcebbb
-ms.openlocfilehash: f26694d92f2919ed04d844352bacbb19bb22f81d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 4dca5729aad86fc17e3b4c387a98c38878d3bf1b
+ms.sourcegitcommit: 6e55aeb538b1c39af754f82d6f7738a18f5aa031
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77420349"
+ms.lasthandoff: 07/29/2020
+ms.locfileid: "87389753"
 ---
 # <a name="c6262"></a>C6262
 
-> avviso C6262: la funzione USA \<costante > byte dello stack: supera/analyze: stacksize\<costante 2 >. Provare a trasferire alcuni dati nell'heap
+> avviso C6262: la funzione usa *constant1* byte di stack: supera/analyze: stacksize *constant2*. Provare a trasferire alcuni dati nell'heap
 
-Questo avviso indica che l'utilizzo dello stack che supera una soglia preimpostata (`constant 2`) è stato rilevato in una funzione. Le dimensioni stack frame predefinite per questo avviso sono pari a 16 KB per la modalità utente, 1 KB per la modalità kernel. Lo stack, anche in modalità utente, è limitato e l'impossibilità di eseguire il commit di una pagina di stack causa un'eccezione di overflow dello stack. La modalità kernel ha un limite di dimensioni dello stack di 12 KB, che non può essere aumentato; Pertanto, il codice in modalità kernel dovrebbe limitare in modo aggressivo l'utilizzo dello stack.
+Questo avviso indica che in una funzione è stato rilevato l'utilizzo dello stack che supera una soglia preimpostata (*constant2*). Le dimensioni stack frame predefinite per questo avviso sono pari a 16 KB per la modalità utente, 1 KB per la modalità kernel. Lo stack, anche in modalità utente, è limitato e l'impossibilità di eseguire il commit di una pagina di stack causa un'eccezione di overflow dello stack. La modalità kernel ha un limite di dimensioni dello stack di 12 KB, che non può essere aumentato; Pertanto, il codice in modalità kernel dovrebbe limitare in modo aggressivo l'utilizzo dello stack.
 
-Per risolvere il problema relativo a questo avviso, è possibile spostare alcuni dati nell'heap o in un'altra memoria dinamica.  In modalità utente, una stack frame di grandi dimensioni potrebbe non essere un problema, e questo avviso può essere eliminato, ma un stack frame elevato aumenta il rischio di un overflow dello stack. È possibile che si verifichi una grande stack frame se la funzione usa lo stack in modo intensivo o è ricorsivo. La dimensione totale dello stack in modalità utente può essere aumentata se si verifica effettivamente un overflow dello stack, ma solo fino al limite di sistema.  È possibile utilizzare l'opzione della riga di comando **/Analyze** per modificare il valore di `<constant 2>`, ma aumentando il rischio che un errore non venga segnalato.
+Per risolvere il problema relativo a questo avviso, è possibile spostare alcuni dati nell'heap o in un'altra memoria dinamica.  In modalità utente, una stack frame di grandi dimensioni potrebbe non essere un problema, e questo avviso può essere eliminato, ma un stack frame elevato aumenta il rischio di un overflow dello stack. È possibile che si verifichi una grande stack frame se la funzione usa lo stack in modo intensivo o è ricorsivo. La dimensione totale dello stack in modalità utente può essere aumentata se si verifica effettivamente un overflow dello stack, ma solo fino al limite di sistema.  È possibile utilizzare l' **`/analyze`** opzione della riga di comando per modificare il valore di *constant2*, ma aumentando il rischio che un errore non venga segnalato.
 
-Per il codice in modalità kernel, ad esempio nei progetti driver, il valore di `<constant 2>` è impostato su 1 KB. I driver ben scritti dovrebbero avere poche funzioni che si avvicinano a questo valore e la modifica del limite verso il basso potrebbe essere auspicabile.  Le stesse tecniche generali usate per il codice in modalità utente per ridurre le dimensioni dello stack possono essere adattate al codice in modalità kernel.
+Per il codice in modalità kernel, ad esempio nei progetti driver, il valore di *constant2* è impostato su 1 KB. I driver ben scritti dovrebbero avere poche funzioni che si avvicinano a questo valore e la modifica del limite verso il basso potrebbe essere auspicabile.  Le stesse tecniche generali usate per il codice in modalità utente per ridurre le dimensioni dello stack possono essere adattate al codice in modalità kernel.
 
 ## <a name="example"></a>Esempio
 
@@ -69,24 +69,18 @@ void f( )
 }
 ```
 
-L'uso di malloc e Free presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL ( C++ Standard Template Library). Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [ C++ libreria standard](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [`shared_ptr`](/cpp/standard-library/shared-ptr-class) , [`unique_ptr`](/cpp/standard-library/unique-ptr-class) e [`vector`](/cpp/standard-library/vector) . Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
 
-**Per correggere questo avviso regolando le dimensioni dello stack**
+### <a name="to-correct-this-warning-by-adjusting-the-stack-size"></a>Per correggere questo avviso regolando le dimensioni dello stack
 
-1. Sulla barra dei menu scegliere **Progetto** > **Proprietà**.
+1. Sulla barra dei menu scegliere proprietà **progetto**  >  **Properties**.
 
-     Viene visualizzata la finestra di dialogo **Pagine delle proprietà**.
+1. Nella finestra di dialogo **pagine delle proprietà** selezionare la pagina delle proprietà proprietà di **configurazione**  >  **C/C++**  >  **riga di comando** .
 
-2. Espandere **proprietà di configurazione**.
-
-3. Espandere **C/C++** .
-
-4. Selezionare proprietà della **riga di comando** .
-
-5. In **Opzioni aggiuntive**aggiungere **/analyze: stacksize16388**.
+1. In **Opzioni aggiuntive**aggiungere *`/analyze:stacksize32768`* .
 
 ## <a name="see-also"></a>Vedere anche
 
-- [/STACK (allocazioni stack)](/cpp/build/reference/stack-stack-allocations)
-- [_resetstkoflw](/cpp/c-runtime-library/reference/resetstkoflw)
-- [Procedura: Usare controlli runtime nativi](/visualstudio/debugger/how-to-use-native-run-time-checks)
+- [`/STACK`(Allocazioni stack)](/cpp/build/reference/stack-stack-allocations)
+- [`_resetstkoflw`](/cpp/c-runtime-library/reference/resetstkoflw)
+- [Procedura: utilizzare i controlli runtime nativi](/visualstudio/debugger/how-to-use-native-run-time-checks)
