--- a/docs/code-quality/c26474.md
+++ b/docs/code-quality/c26474.md
@@ -1,44 +1,49 @@
 ---
 title: C26474
-ms.date: 11/15/2017
+ms.date: 08/11/2020
 ms.topic: conceptual
 f1_keywords:
 - C26474
 helpviewer_keywords:
 - C26474
 ms.assetid: 1e23a8e6-97fa-47f5-a279-b52aa2efafa4
-ms.openlocfilehash: 88e761cf0533fd09f615d6013f2d20af0b20f245
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 91e3e5f9d84491d82366a0b125853de271c57173
+ms.sourcegitcommit: 8140647370017b885432349ce89f187c3068b46a
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81320084"
+ms.lasthandoff: 08/12/2020
+ms.locfileid: "88144152"
 ---
 # <a name="c26474-no_implicit_cast"></a>C26474 NO_IMPLICIT_CAST
 
-"Non eseguire il cast tra tipi puntatore quando la conversione potrebbe essere implicita."
+"Non eseguire il cast tra tipi di puntatore quando la conversione potrebbe essere implicita".
 
-**Linee guida**di base di C : Tipo.1: Evitare i cast
+**Linee guida di base di C++**: \
+Tipo. 1: evitare cast
 
-In alcuni casi, i cast impliciti tra i tipi puntatore possono essere eseguiti in modo sicuro e non richiedono all'utente di scrivere un'espressione cast specifica. Questa regola trova istanze di tale cast non necessario che possono essere rimosse.
+In alcuni casi, i cast impliciti tra i tipi di puntatore sono sicuri e non richiedono la scrittura di un'espressione cast specifica. Questa regola consente di trovare istanze di cast non necessari che è possibile rimuovere in modo sicuro.
 
 ## <a name="remarks"></a>Osservazioni
 
-- L'ID regola è un po' fuorviante: deve essere interpretato come "cast implicito non viene utilizzato dove è accettabile".
-  - La regola è applicabile solo ai puntatori e controlla i cast statici e reinterpreta i cast.
-  - I casi seguenti sono conversioni di puntatore accettabili che non devono utilizzare espressioni cast esplicite:The following cases are acceptable pointer conversions that should not use explicit cast expressions:
-  - conversione in nullptr_t;
-  - conversione in void;
-  - conversione dal tipo derivato alla relativa base.
+L'ID della regola deve essere interpretato come "un cast implicito non viene usato dove è accettabile".
 
-## <a name="example"></a>Esempio
+Questa regola è applicabile solo ai puntatori. Verifica i cast statici e reinterpreta i cast.
 
-conversione non necessaria nasconde l'errore logico
+Questi casi sono conversioni di puntatori accettabili che non devono usare espressioni cast esplicite:
+- conversione in `nullptr_t` ;
+- conversione in `void*` ;
+- conversione da un tipo derivato alla relativa base quando viene richiamata una funzione membro di base non nascosta dal tipo derivato. 
+
+## <a name="example-1"></a>Esempio 1
+
+Una conversione non necessaria nasconde un errore logico in questo esempio:
 
 ```cpp
 template<class T>
 bool register_buffer(T buffer) {
     auto p = reinterpret_cast<void*>(buffer); // C26474, also 26490 NO_REINTERPRET_CAST
+    // To fix, declare buffer as T*, and use this to define p:
+    // auto p = buffer;
     return buffers_.insert(p).second;
 }
 
@@ -53,14 +58,26 @@ void merge_bytes(std::uint8_t *left, std::uint8_t *right)
 }
 ```
 
-conversione non necessaria nasconde l'errore logico - rielaborato
+## <a name="example-2"></a>Esempio 2
+
+Questo esempio illustra l'uso di cast per accedere alle funzioni membro della classe base:
 
 ```cpp
-// ...
-template<class T>
-bool register_buffer(T *buffer) {
-    auto p = buffer;
-    return buffers_.insert(p).second;
+struct struct_1
+{
+    void foo();
+    void bar();
+};
+
+struct struct_2 : struct_1
+{
+    void foo(); // this definition hides struct_1::foo
+};
+
+void fn(struct_2* ps2)
+{
+    static_cast<struct_1*>(ps2)->foo(); // This cast is necessary to access struct_1::foo
+                                        // Alternatively, use ps2->struct_1::foo();
+    static_cast<struct_1*>(ps2)->bar(); // This cast is unnecessary and can be done implicitly
 }
-// ...
 ```
