--- a/docs/code-quality/c26405.md
+++ b/docs/code-quality/c26405.md
@@ -7,16 +7,16 @@ f1_keywords:
 helpviewer_keywords:
 - C26405
 ms.assetid: 2034d961-3ec5-4184-bbef-aa792e4c03c0
-ms.openlocfilehash: af65a33c2961ad9701bcd95af902073db1bdd691
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: a9f7d79ef4948b9559789d93416e143b8508269c
+ms.sourcegitcommit: 1839405b97036891b6e4d37c99def044d6f37eff
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418375"
+ms.lasthandoff: 08/18/2020
+ms.locfileid: "88562064"
 ---
 # <a name="c26405--dont_assign_to_valid"></a>DONT_ASSIGN_TO_VALID C26405
 
-Se un puntatore proprietario fa già riferimento a un buffer di memoria valido, non deve essere assegnato a un altro valore senza rilasciare prima la risorsa corrente. Tale assegnazione può causare una perdita di risorse anche se l'indirizzo della risorsa viene copiato in un puntatore non elaborato, perché i puntatori non elaborati non devono rilasciare le risorse.
+Se un puntatore proprietario fa già riferimento a un buffer di memoria valido, non deve essere assegnato a un altro valore senza rilasciare prima la risorsa corrente. Tale assegnazione può causare una perdita di risorse anche se l'indirizzo della risorsa viene copiato in un puntatore non elaborato, perché i puntatori non elaborati non devono rilasciare le risorse. Per ulteriori informazioni, vedere la [linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r3-a-raw-pointer-a-t-is-non-owning).
 
 ## <a name="example-1-overwriting-an-owner-in-a-loop"></a>Esempio 1: sovrascrivere un proprietario in un ciclo
 
