commit translated contents

--- a/docs/code-quality/c26407.md
+++ b/docs/code-quality/c26407.md
@@ -1,32 +1,32 @@
 ---
 title: C26407
-ms.date: 07/21/2017
+ms.date: 08/18/2020
 ms.topic: conceptual
 f1_keywords:
 - C26407
 helpviewer_keywords:
 - C26407
 ms.assetid: 5539907a-bfa0-40db-82a6-b860c97209e1
-ms.openlocfilehash: 35d8776216fb611416b053371c2703421dcaea08
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 99e3f981e08f3c6442104b7f02a98a2f86dc4c92
+ms.sourcegitcommit: 65fead53d56d531d71be42216056aca5f44def11
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418368"
+ms.lasthandoff: 08/19/2020
+ms.locfileid: "88610933"
 ---
-# <a name="c26407-dont_heap_allocate_unnecessarily"></a>DONT_HEAP_ALLOCATE_UNNECESSARILY C26407
+# <a name="c26407-dont_heap_allocate_unnecessarily"></a>C26407 DONT_HEAP_ALLOCATE_UNNECESSARILY
 
-Per evitare l'utilizzo non necessario di puntatori, provare a rilevare modelli comuni di allocazioni locali, ad esempio quando il risultato di una chiamata a operator new viene archiviato in una variabile locale e successivamente eliminato in modo esplicito. Questo supporta la regola R. 5: *preferisce gli oggetti con ambito, non allocare inutilmente gli heap*. La correzione consigliata consiste nell'usare un tipo RAII anziché un puntatore non elaborato e consentirgli di gestire le risorse. Se un'allocazione è un singolo oggetto, può essere ovviamente superfluo e una variabile locale del tipo di oggetto potrebbe funzionare meglio.
+Per evitare un uso non necessario dei puntatori, si tenta di rilevare modelli comuni di allocazioni locali. Ad esempio, viene rilevato quando il risultato di una chiamata a Operator **`new`** viene archiviato in una variabile locale e successivamente eliminato in modo esplicito. Supporta la [regola di linee guida di base di C++ R. 5](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r5-prefer-scoped-objects-dont-heap-allocate-unnecessarily): *preferisce gli oggetti con ambito, non allocare inutilmente gli heap*. Per risolvere il problema, usare un tipo RAII anziché un puntatore non elaborato e consentirne la gestione delle risorse. Ovviamente, non è necessario creare un tipo di wrapper per allocare un singolo oggetto. Al contrario, una variabile locale del tipo di oggetto funzionerebbe meglio.
 
 ## <a name="remarks"></a>Osservazioni
 
-- Per ridurre il numero di avvisi, questo modello viene rilevato solo per i puntatori proprietario. Pertanto, è necessario contrassegnare prima i proprietari in modo corretto. Possiamo estenderlo facilmente per coprire i puntatori non elaborati se riceviamo feedback dai clienti a supporto di tale scenario.
+- Per ridurre il numero di avvisi, l'analisi del codice rileva solo questo modello per i puntatori del proprietario. Quindi, è necessario contrassegnare prima i proprietari in modo corretto. Possiamo estenderlo facilmente per coprire i puntatori non elaborati se riceviamo [commenti e suggerimenti](https://developercommunity.visualstudio.com/spaces/62/index.html) dai clienti a supporto di questi scenari.
 
-- Il termine oggetto con ambito può essere fuorviante, ma l'idea generale è che è consigliabile usare una variabile locale la cui durata è gestita automaticamente o un oggetto intelligente che gestisce in modo efficiente le risorse dinamiche. Gli oggetti intelligenti possono naturalmente eseguire allocazioni di heap, ma non sono espliciti nel codice.
+- Il termine *oggetto con ambito* può essere un po' fuorviante. In generale, si consiglia di usare una variabile locale la cui durata è gestita automaticamente o un oggetto intelligente che gestisce in modo efficiente le risorse dinamiche. Gli oggetti intelligenti possono naturalmente eseguire allocazioni di heap, ma non sono espliciti nel codice.
 
-- Se l'avviso viene attivato nell'allocazione di matrici (che in genere è necessaria per i buffer dinamici), la correzione può essere l'uso di contenitori standard o `std::unique_pointer<T[]>`.
+- Se l'avviso viene attivato per l'allocazione di matrici, che in genere è necessario per i buffer dinamici, è possibile correggerlo utilizzando contenitori standard o `std::unique_pointer<T[]>` .
 
-- Il modello viene rilevato solo per le variabili locali, pertanto non viene visualizzato alcun avviso nei casi in cui un'allocazione viene assegnata a una variabile globale e quindi eliminata nella stessa funzione.
+- Il modello viene rilevato solo per le variabili locali. Non viene visualizzato alcun avviso nei casi in cui un'allocazione viene assegnata a una variabile globale e quindi eliminata nella stessa funzione.
 
 ## <a name="example-1-unnecessary-object-allocation-on-heap"></a>Esempio 1: allocazione di oggetti non necessaria nell'heap
 
