--- a/docs/code-quality/c26406.md
+++ b/docs/code-quality/c26406.md
@@ -1,24 +1,30 @@
 ---
 title: C26406
-ms.date: 07/21/2017
+ms.date: 08/18/2020
 ms.topic: conceptual
 f1_keywords:
 - C26406
 helpviewer_keywords:
 - C26406
 ms.assetid: 02fb8e23-1989-4e24-a5a5-e30f71d00325
-ms.openlocfilehash: 8546af8ba2fc1954c23c8e3bf72660f2c5b60142
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: ea39811b657b08a33639ccd86b704a91792934be
+ms.sourcegitcommit: 65fead53d56d531d71be42216056aca5f44def11
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417227"
+ms.lasthandoff: 08/19/2020
+ms.locfileid: "88610881"
 ---
-# <a name="c26406--dont_assign_raw_to_owner"></a>C26406  DONT_ASSIGN_RAW_TO_OWNER
+# <a name="c26406--dont_assign_raw_to_owner"></a>DONT_ASSIGN_RAW_TO_OWNER C26406
 
-I proprietari vengono inizializzati dalle allocazioni o da altri proprietari. L'assegnazione di un valore da un puntatore non elaborato a un puntatore proprietario non è consentita. I puntatori non elaborati non garantiscono il trasferimento della proprietà; potrebbe essere ancora presente un proprietario originale che contiene la risorsa e tenterà di rilasciarlo. Si noti che l'assegnazione di un valore dal proprietario a un puntatore non elaborato è corretta; i puntatori non elaborati sono client validi per accedere alle risorse, ma non per gestirli.
+Questo avviso impone R. 3 dal Linee guida di base di C++. Per ulteriori informazioni, vedere [linee guida di base di C++ R. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r3-a-raw-pointer-a-t-is-non-owning).
+
+## <a name="remarks"></a>Osservazioni
+
+I proprietari vengono inizializzati dalle allocazioni o da altri proprietari. Questo avviso viene visualizzato quando si assegna un valore da un puntatore non elaborato a un puntatore proprietario. I puntatori non elaborati non garantiscono il trasferimento della proprietà; il proprietario originale può comunque mantenere la risorsa e tentare di rilasciarla. È bene assegnare un valore da un proprietario a un puntatore non elaborato. I puntatori non elaborati sono client validi per accedere alle risorse, ma non per gestirli.
 
 ## <a name="example-1--using-address-of-object"></a>Esempio 1: utilizzo dell'indirizzo dell'oggetto
+
+Questo esempio tenta di assegnare la proprietà dell'indirizzo di `defaultSocket` al puntatore del proprietario `socket` :
 
 ```cpp
 gsl::owner<Socket*> socket = defaultSocket ? &defaultSocket : new Socket(); // C26406
