--- a/docs/code-quality/c26427.md
+++ b/docs/code-quality/c26427.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26427
 ms.assetid: 8fb95a44-8704-45b1-bc55-eccd59b1db2f
-ms.openlocfilehash: 01e2b083709fadf15efd5d888a87ce6ef159f37d
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 54f66f5cddaa438566bedcece75ec703bfc6d3af
+ms.sourcegitcommit: 65fead53d56d531d71be42216056aca5f44def11
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87233886"
+ms.lasthandoff: 08/19/2020
+ms.locfileid: "88610868"
 ---
 # <a name="c26427-no_global_init_externs"></a>NO_GLOBAL_INIT_EXTERNS C26427
 
 "L'inizializzatore globale accede all'oggetto extern".
 
-**Linee guida di base di C++**: I. 22: evitare l'inizializzazione complessa degli oggetti globali
+**Linee guida di base di C++**: [I. 22](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#i22-avoid-complex-initialization-of-global-objects): evitare l'inizializzazione complessa degli oggetti globali
 
 Gli oggetti globali possono essere inizializzati in un ordine incoerente o non definito, il che significa che l'interdipendenza tra di essi è rischiosa e deve essere evitata. Questa linea guida è applicabile quando gli inizializzatori fanno riferimento a un altro oggetto considerato come **`extern`** .
 
