--- a/docs/code-quality/c26498.md
+++ b/docs/code-quality/c26498.md
@@ -1,18 +1,43 @@
 ---
 title: C26498
-ms.date: 03/22/2018
+ms.date: 08/18/2020
 ms.topic: reference
 f1_keywords:
 - C26498
 helpviewer_keywords:
 - C26498
-ms.openlocfilehash: 06ef26c0baf406f6089ad02e708d54e359f00ab3
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 29d808f7c058764da10a9d2a462995859ef23f36
+ms.sourcegitcommit: 65fead53d56d531d71be42216056aca5f44def11
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416737"
+ms.lasthandoff: 08/19/2020
+ms.locfileid: "88610686"
 ---
 # <a name="c26498-use_constexpr_for_functioncall"></a>C26498 USE_CONSTEXPR_FOR_FUNCTIONCALL
 
-Questa chiamata di funzione% Function% può utilizzare `constexpr` se si desidera la valutazione in fase di compilazione. Vedere [ C++ linee guida di base con. 5](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rconst-constexpr).
+Questa regola consente di applicare con. 5 dalla [linee guida di base di C++](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#con5-use-constexpr-for-values-that-can-be-computed-at-compile-time): usare constExpr per i valori che possono essere calcolati in fase di compilazione. 
+
+## <a name="remarks"></a>Osservazioni
+
+L'avviso viene attivato assegnando il risultato di una **`constexpr`** funzione a qualsiasi variabile non variabile il **`constexpr`** cui valore non cambia dopo l'assegnazione iniziale.
+
+## <a name="example"></a>Esempio
+
+Questo codice di esempio mostra dove può essere visualizzato C26498 e come evitarlo:
+
+```cpp
+constexpr int getMyValue()
+{
+    return 1;
+}
+
+void foo()
+{
+    constexpr int val0 = getMyValue(); // no C26498
+    const int val1 = getMyValue();     // C26498, C26814
+    int val2 = getMyValue();           // C26498, value is never modified
+    int val3 = getMyValue();           // no C26498, val3 is assigned to below.
+    val3 = val3 * val2;
+}
+```
+
