commit translated contents

--- a/docs/code-quality/c26402.md
+++ b/docs/code-quality/c26402.md
@@ -1,19 +1,52 @@
 ---
 title: C26402
-ms.date: 09/04/2019
+ms.date: 08/20/2020
 ms.topic: conceptual
 f1_keywords:
 - C26402
 helpviewer_keywords:
 - C26402
 ms.assetid: b9d3d398-697a-4a5d-8bfe-9c667dffb90b
-ms.openlocfilehash: 2d2018c79e70e2f2a3c370111aaebdd087d1990f
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: fd0b965353e5a2fd0201dec0875918c7bdbeff14
+ms.sourcegitcommit: f1752bf90b4f869633a859ace85439ca19e208b2
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417276"
+ms.lasthandoff: 08/21/2020
+ms.locfileid: "88722115"
 ---
-# <a name="c26402dont_heap_allocate_movable_result"></a>DONT_HEAP_ALLOCATE_MOVABLE_RESULT C26402
+# <a name="c26402dont_heap_allocate_movable_result"></a>C26402 DONT_HEAP_ALLOCATE_MOVABLE_RESULT
 
-Per evitare confusione se un puntatore è proprietario di un oggetto, una funzione che restituisce un oggetto mobile deve allocarla nello stack e restituirla per valore anziché restituire un oggetto allocato dall'heap. Se la semantica del puntatore è obbligatoria, restituire un puntatore intelligente anziché un puntatore non elaborato. Vedere [ C++ linee guida di base R. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rr-ptr): *Avvisa se una funzione restituisce un oggetto allocato all'interno della funzione ma ha un costruttore di spostamento. Si consiglia di valutare la possibilità di restituirlo in base al valore.*
+> `Return a scoped object instead of a heap-allocated if it has a move constructor (r.3).`
+
+## <a name="remarks"></a>Commenti
+
+Per evitare confusione se un puntatore è proprietario di un oggetto, una funzione che restituisce un oggetto mobile deve allocarla nello stack. Deve quindi restituire l'oggetto in base al valore anziché restituire un oggetto allocato dall'heap. Se è richiesta la semantica dei puntatori, restituire un puntatore intelligente anziché un puntatore non elaborato. Per altre informazioni, vedere [linee guida di base di C++ R. 3](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#Rr-ptr): *Avvisa se una funzione restituisce un oggetto allocato all'interno della funzione ma ha un costruttore di spostamento. Si consiglia di valutare la possibilità di restituirlo in base al valore.*
+
+## <a name="example"></a>Esempio
+
+In questo esempio viene illustrata una funzione, `bad_example` , che genera l'avviso C26409. Viene inoltre illustrato il modo in cui `good_example` la funzione non causa questo problema.
+
+```cpp
+// C26402.cpp
+
+struct S
+{
+    S() = default;
+    S(S&& s) = default;
+};
+
+S* bad_example()
+{
+    S* s = new S(); // C26409, avoid explicitly calling new.
+    // ... 
+    return s; // C26402
+}
+
+// Prefer returning objects with move contructors by value instead of unnecessarily heap-allocating the object.
+S good_example() noexcept
+{
+    S s;
+    // ...
+    return s;
+}
+```
