--- a/docs/code-quality/c26409.md
+++ b/docs/code-quality/c26409.md
@@ -1,27 +1,44 @@
 ---
 title: C26409
-ms.date: 07/21/2017
+ms.date: 08/20/2020
 ms.topic: conceptual
 f1_keywords:
 - C26409
 helpviewer_keywords:
 - C26409
 ms.assetid: a3b3a229-d566-4be3-bd28-2876ccc8dc37
-ms.openlocfilehash: 6795c82b5b45d8ddb588365a69c2b5a41922a0f7
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: f525f37bb5ccf48c4f0f2ae1e33a2d447e409816
+ms.sourcegitcommit: f1752bf90b4f869633a859ace85439ca19e208b2
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87226112"
+ms.lasthandoff: 08/21/2020
+ms.locfileid: "88722167"
 ---
 # <a name="c26409-no_new_delete"></a>NO_NEW_DELETE C26409
 
-Anche se il codice è pulito dalle chiamate a malloc () e Free (), è comunque consigliabile considerare opzioni migliori rispetto all'utilizzo esplicito di Operators [New e Delete](/cpp/cpp/new-and-delete-operators).
+> `Avoid calling new and delete explicitly, use std::make_unique<T> instead (r.11).`
 
-  **Linee guida di base di C++**: [R. 11: evitare la chiamata di New e DELETE in modo esplicito](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r11-avoid-calling-new-and-delete-explicitly)
+Anche se il codice è pulito dalle chiamate a ` malloc()` e `free()` , è comunque consigliabile prendere in considerazione opzioni migliori rispetto all'uso esplicito degli operatori [ `new` e `delete` ](/cpp/cpp/new-and-delete-operators).
 
-La correzione finale consiste nell'iniziare a usare i puntatori intelligenti con le funzioni Factory appropriate, ad esempio [std:: make_unique](/cpp/standard-library/memory-functions#make_unique).
+**Linee guida di base di C++**: \
+[R. 11: evitare la chiamata al nuovo ed eliminare in modo esplicito](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#r11-avoid-calling-new-and-delete-explicitly)
 
-## <a name="remarks"></a>Osservazioni
+La correzione finale consiste nell'utilizzare i puntatori intelligenti e le funzioni predefinite appropriate, ad esempio [`std::make_unique`](/cpp/standard-library/memory-functions#make_unique) .
 
-- Il controllo Avvisa in caso di chiamate a qualsiasi tipo di operatore **`new`** o **`delete`** : scalare, vettore, versioni di overload (globali e specifiche della classe), nonché nelle versioni di selezione host. Il secondo caso potrebbe richiedere chiarimenti sulle linee guida di base in termini di correzioni suggerite e potrebbe essere omesso in futuro.
+## <a name="remarks"></a>Commenti
+
+- Il controllo Avvisa in caso di chiamate a qualsiasi tipo di operatore **`new`** o **`delete`** : scalare, vettore, versioni di overload (globali e specifiche della classe) e versioni di posizionamento. Il caso di posizionamento **`new`** potrebbe richiedere alcuni chiarimenti nelle linee guida principali per le correzioni suggerite e può essere omesso in futuro.
+
+## <a name="example"></a>Esempio
+
+Questo esempio mostra che C26409 viene generato per gli espliciti **`new`** e **`delete`** . Prendere in considerazione l'uso di funzioni di factory del puntatore intelligente, come in `std::make_unique` alternativa.
+
+```cpp
+void f(int i)
+{
+    int* arr = new int[i]{}; // C26409, warning is issued for all new calls
+    delete[] arr;            // C26409, warning is issued for all delete calls
+
+    auto unique = std::make_unique<int[]>(i); // prefer using smart pointers over new and delete
+} 
+```
