--- a/docs/code-quality/c26410.md
+++ b/docs/code-quality/c26410.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C26410
 ms.assetid: d1547faf-96c6-48da-90f5-841154d0e878
-ms.openlocfilehash: 98573f4852314be1d7ad933d6b58e466080c05cc
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 1f2cbecdc1d042f8b82ec18ecbbe8e491729d6a8
+ms.sourcegitcommit: f1752bf90b4f869633a859ace85439ca19e208b2
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417206"
+ms.lasthandoff: 08/21/2020
+ms.locfileid: "88722141"
 ---
 # <a name="c26410--no_ref_to_const_unique_ptr"></a>NO_REF_TO_CONST_UNIQUE_PTR C26410
 
-Generalmente, i riferimenti a un puntatore univoco const sono privi di significato. Possono essere sostituiti in modo sicuro da un riferimento non elaborato o un puntatore.
+Generalmente, i riferimenti a un puntatore univoco const sono privi di significato. Possono essere sostituiti in modo sicuro da un riferimento non elaborato o un puntatore. Questo avviso impone [linee guida di base di C++ regola R. 32](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r32-take-a-unique_ptrwidget-parameter-to-express-that-a-function-assumes-ownership-of-a-widget).
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
-- I controlli Unique Pointer hanno criteri piuttosto ampi per identificare i puntatori intelligenti. Regola R. 31: *se sono presenti puntatori intelligenti non STD, seguire il modello di base di STD descrive i concetti di puntatore univoco e di puntatore condiviso*. L'euristica è semplice, ma può causare sorprese: un tipo di puntatore intelligente è qualsiasi tipo che definisce operator-> o operator\*; un tipo in grado di copiare (puntatore condiviso) deve avere un costruttore di copia pubblico o un operatore di assegnazione di overload che gestisce un parametro di riferimento non R-value.
+- I controlli Unique Pointer hanno criteri piuttosto ampi per identificare i puntatori intelligenti. La [regola di linee guida di base di C++ R. 31](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r31-if-you-have-non-std-smart-pointers-follow-the-basic-pattern-from-std): *se sono presenti puntatori intelligenti non STD, seguire il modello di base di STD descrive i concetti di puntatore univoco e di puntatore condiviso*. L'euristica è semplice, ma può causare sorprese: un tipo di puntatore intelligente è qualsiasi tipo che definisce operator-> o Operator \* ; un tipo in grado di copiare (puntatore condiviso) deve avere un costruttore di copia pubblico o un operatore di assegnazione di overload che tratta di un parametro di riferimento non R-value.
 
 - Il codice del modello può produrre molto rumore. Tenere presente che è possibile creare istanze dei modelli con diversi parametri di tipo con diversi livelli di riferimento indiretto, inclusi i riferimenti. Alcuni avvisi potrebbero non essere evidenti e le correzioni potrebbero richiedere una rielaborazione dei modelli, ad esempio la rimozione esplicita del riferimento indiretto. Se il codice del modello è intenzionalmente generico, è possibile che l'avviso venga eliminato.
 
