--- a/docs/code-quality/c26411.md
+++ b/docs/code-quality/c26411.md
@@ -1,32 +1,32 @@
 ---
 title: C26411
-ms.date: 11/15/2017
+ms.date: 08/19/2020
 ms.topic: conceptual
 f1_keywords:
 - C26411
 helpviewer_keywords:
 - C26411
 ms.assetid: 5134e51e-8b92-4ee7-94c3-022e318a0e24
-ms.openlocfilehash: a602a3b8c0545c64d23e60cab4987c4b7a9b4543
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: e1d812b9d5080d39098c36d185a2dcaa9fcdebf1
+ms.sourcegitcommit: f1752bf90b4f869633a859ace85439ca19e208b2
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417192"
+ms.lasthandoff: 08/21/2020
+ms.locfileid: "88722128"
 ---
 # <a name="c26411--no_ref_to_unique_ptr"></a>NO_REF_TO_UNIQUE_PTR C26411
 
-Il passaggio di un puntatore univoco per riferimento presuppone che la relativa risorsa possa essere rilasciata o trasferita all'interno di una funzione di destinazione. Se la funzione usa solo il parametro per accedere alla risorsa, è possibile passare un puntatore non elaborato o un riferimento.
+Quando si passa un puntatore univoco a una funzione per riferimento, significa che la risorsa può essere rilasciata o trasferita nella funzione. Se la funzione usa solo il parametro per accedere alla risorsa, è possibile passare un puntatore non elaborato o un riferimento. Per altre informazioni, vedere [linee guida di base di C++ Rule R. 33](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r33-take-a-unique_ptrwidget-parameter-to-express-that-a-function-reseats-thewidget): *Take an unique_ptr \<widget\>& Parameter per esprimere che una funzione risieda il widget*.
 
-## <a name="remarks"></a>Osservazioni
+## <a name="remarks"></a>Commenti
 
 - Di seguito sono riportate le limitazioni relative all'avviso [C26410](C26410.md) .
 
-- L'euristica per rilevare l'accesso "release" o "reset" al puntatore univoco è piuttosto ingenua: vengono rilevate solo le chiamate agli operatori di assegnazione e alle funzioni denominate "reset" (senza distinzione tra maiuscole e minuscole). Ovviamente, questo rilevamento non copre tutti i possibili casi di modifiche intelligenti del puntatore, ad esempio std:: swap o qualsiasi funzione speciale non const in un puntatore intelligente personalizzato. Si prevede che questo avviso produrrà molti falsi positivi sui tipi personalizzati, oltre ad alcuni scenari che riguardano i puntatori univoci standard. L'euristica verrà migliorata quando si implementano più controlli incentrati sui puntatori intelligenti.
+- L'euristica per rilevare `release` o `reset` accedere al puntatore univoco è ingenua. Vengono rilevate solo le chiamate agli operatori di assegnazione e alle funzioni denominate senza `reset` distinzione tra maiuscole e minuscole. Ovviamente, questo rilevamento non copre tutti i possibili casi di modifiche intelligenti del puntatore. (Ad esempio, non rileva `std::swap` o qualsiasi funzione non speciale **`const`** in un puntatore intelligente personalizzato). Si prevede che questo avviso possa produrre molti falsi positivi sui tipi personalizzati e in alcuni scenari che riguardano i puntatori univoci standard. Si prevede di migliorare l'euristica implementando più controlli incentrati sui puntatori intelligenti.
 
-- Il fatto che i puntatori intelligenti siano spesso modelli comporta una limitazione interessante per il fatto che il compilatore non deve elaborare il codice del modello nei modelli se non viene utilizzato. In alcune basi di codice minime che hanno un uso limitato delle interfacce del puntatore intelligente, il controllo può produrre risultati imprevisti a causa dell'impossibilità di identificare correttamente la semantica del tipo di modello (perché alcune funzioni importanti potrebbero non essere mai usate). Per la `unique_pointer`standard, questa limitazione viene attenuata riconoscendo il nome del tipo. Questo può essere esteso in futuro per coprire i puntatori intelligenti più noti.
+- Il fatto che i puntatori intelligenti siano spesso modelli comporta una limitazione interessante. Il compilatore non è necessario per elaborare il codice del modello nei modelli se non è usato. Nel codice che usa in modo limitato le interfacce del puntatore intelligente, il controllo può produrre risultati imprevisti. Il controllo non è in grado di identificare correttamente la semantica del tipo di modello, perché alcune funzioni potrebbero non essere mai utilizzate. Per lo standard `std::unique_ptr` , questo limite viene mitigato riconoscendo il nome del tipo. Questo può essere esteso in futuro per coprire i puntatori intelligenti più noti.
 
-- Le espressioni lambda con acquisizione implicita per riferimento possono causare avvisi sorprendenti sui riferimenti a puntatori univoci. Attualmente vengono segnalati tutti i parametri di riferimento acquisiti nelle espressioni lambda, indipendentemente dal fatto che vengano reimpostati o meno. L'euristica verrà estesa in modo da correlare i campi lambda con i parametri lambda in una versione futura.
+- Le espressioni lambda che eseguono un'acquisizione per riferimento implicita possono causare avvisi sorprendenti sui riferimenti a puntatori univoci. Attualmente, vengono segnalati tutti i parametri di riferimento acquisiti nelle espressioni lambda, indipendentemente dal fatto che vengano reimpostati o meno. Una versione futura può estendere l'euristica per correlare i campi lambda e i parametri lambda.
 
 ## <a name="example-unnecessary-reference"></a>Esempio: riferimento non necessario
 
