commit translated contents

--- a/docs/code-quality/c26416.md
+++ b/docs/code-quality/c26416.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26416
 ms.assetid: f158207b-45cf-44cf-8e4b-b5b75b56ea0e
-ms.openlocfilehash: 451feae92279eb8badad6f2fc945148247150cd2
-ms.sourcegitcommit: 63784729604aaf526de21f6c6b62813882af930a
+ms.openlocfilehash: 0fdff28c7225728fbe9964ca491692d8bae0fb25
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 03/17/2020
-ms.locfileid: "79444992"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88832828"
 ---
-# <a name="c26416-no_rvalue_ref_shared_ptr"></a>NO_RVALUE_REF_SHARED_PTR C26416
+# <a name="c26416-no_rvalue_ref_shared_ptr"></a>C26416 NO_RVALUE_REF_SHARED_PTR
 
-> Il parametro del puntatore condiviso viene passato per riferimento rvalue. Passare invece per valore.
+> Il parametro del puntatore condiviso viene passato per riferimento rvalue. In alternativa, passare per valore.
 
-Linee guida di base: R. 34: prendere un shared_ptr\<widget > parametro per esprimere che una funzione è il proprietario della parte **C++**
+**Linee guida di base di C++**: [R. 34](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r34-take-a-shared_ptrwidget-parameter-to-express-that-a-function-is-part-owner): accetta un \<widget> parametro di shared_ptr per esprimere che una funzione è il proprietario della parte
 
 Il passaggio di un puntatore condiviso per riferimento rvalue non è in genere necessario. A meno che non si tratti di un'implementazione della semantica di spostamento per un tipo di puntatore condiviso, gli oggetti puntatore condivisi possono essere passati in modo sicuro per valore. L'uso di un riferimento rvalue può indicare anche che il puntatore univoco è più appropriato poiché trasferisce chiaramente la proprietà univoca dal chiamante al chiamato.
 
