--- a/docs/code-quality/c26415.md
+++ b/docs/code-quality/c26415.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26415
 ms.assetid: 4165f70a-78ae-4a03-b256-c4bd74b02d09
-ms.openlocfilehash: 3ca0884a959aa22c02307baa1683fd53bab0234d
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 90d9720e56a004cde9fb3611656732c87a3441ff
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417199"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88832894"
 ---
 # <a name="c26415-smart_ptr_not_needed"></a>SMART_PTR_NOT_NEEDED C26415
 
-"Il parametro del puntatore intelligente viene usato solo per accedere al puntatore contenuto. Usare invece T * o T & ".
+"Il parametro del puntatore intelligente viene usato solo per accedere al puntatore contenuto. Usare invece T * o T& ".
 
-Linee guida di base: R. 30: prendere i puntatori intelligenti come parametri solo per esprimere esplicitamente la semantica di durata **C++**
+**Linee guida di base di C++**: [R. 30](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r30-take-smart-pointers-as-parameters-only-to-explicitly-express-lifetime-semantics): prendere i puntatori intelligenti come parametri solo per esprimere esplicitamente la semantica di durata
 
 L'utilizzo di un tipo di puntatore intelligente per passare dati a una funzione indica che la funzione di destinazione deve gestire la durata dell'oggetto contenuto. Tuttavia, se la funzione usa solo il puntatore intelligente per accedere all'oggetto contenuto e mai effettivamente chiama il codice che può causare la deallocazione (ovvero non influisce mai sulla sua durata), in genere non è necessario complicare l'interfaccia con i puntatori intelligenti. È preferibile un puntatore normale o un riferimento all'oggetto contenuto.
 
