commit translated contents

--- a/docs/code-quality/c26418.md
+++ b/docs/code-quality/c26418.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26418
 ms.assetid: d2c84a40-8a5d-4018-92c2-6498cdd9b541
-ms.openlocfilehash: 9e8521bb67183c990950ab68172173321624978c
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: aeff3fe272e91ac4d2c800ca44183b62a3968325
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418326"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88842065"
 ---
-# <a name="c26418-no_value_or_const_ref_shared_ptr"></a>NO_VALUE_OR_CONST_REF_SHARED_PTR C26418
+# <a name="c26418-no_value_or_const_ref_shared_ptr"></a>C26418 NO_VALUE_OR_CONST_REF_SHARED_PTR
 
-> Il parametro del puntatore condiviso non viene copiato o spostato. Usare T * o T &.
+> Il parametro del puntatore condiviso non viene copiato o spostato. Usare invece T * o T&.
 
-Linee guida di base: R. 36: prendere un widget const shared_ptr\<> & parametro per esprimere che potrebbe mantenere un conteggio dei riferimenti all'oggetto **C++**
+**Linee guida di base di C++**: [R. 36](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#r36-take-a-const-shared_ptrwidget-parameter-to-express-that-it-might-retain-a-reference-count-to-the-object-): prendere un parametro const shared_ptr \<widget>& per esprimere che potrebbe mantenere un conteggio dei riferimenti all'oggetto
 
 Se il parametro del puntatore condiviso viene passato in base al valore o al riferimento a un oggetto costante, si prevede che la funzione assumerà il controllo della durata dell'oggetto di destinazione senza influire sul chiamante. Il codice deve copiare o spostare il parametro del puntatore condiviso in un altro oggetto puntatore condiviso o passarlo ulteriormente a altro codice richiamando funzioni che accettano puntatori condivisi. In caso contrario, il puntatore o il riferimento normale potrebbe essere fattibile.
 
