--- a/docs/code-quality/c26472.md
+++ b/docs/code-quality/c26472.md
@@ -7,25 +7,25 @@ f1_keywords:
 helpviewer_keywords:
 - C26472
 ms.assetid: 51e215a7-0e0a-4e6c-bff1-805bf5b1af29
-ms.openlocfilehash: e9f9f4fb4692e988ec25ddc20407a891a50d1515
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: cf82ee26831a4849331ffe1a9c853bc291eb9a9a
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418067"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88841467"
 ---
 # <a name="c26472-no_casts_for_arithmetic_conversion"></a>NO_CASTS_FOR_ARITHMETIC_CONVERSION C26472
 
 "Non usare un static_cast per le conversioni aritmetiche. USA inizializzazione parentesi graffa, GSL:: narrow_cast o GSL:: narrow. "
 
-Linee guida di base: tipo. 1: evitare cast **C++**
+**Linee guida di base di C++**: [tipo. 1](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#prosafety-type-safety-profile): evitare cast
 
 Questa regola consente di individuare le posizioni in cui vengono utilizzati i cast statici per la conversione tra tipi integrali. Questi cast non sono sicuri perché il compilatore non avvisa se si verifica una perdita di dati. Gli inizializzatori di parentesi graffe sono migliori per i casi in cui vengono usate le costanti e si desidera un errore del compilatore. Sono disponibili anche le utilità della libreria di supporto per le linee guida che consentono di descrivere chiaramente le intenzioni:
 
 - GSL:: Narrow garantisce la conversione senza perdita di perdite e causa un arresto anomalo della fase di esecuzione, se non è possibile.
 - GSL:: narrow_cast indica chiaramente che la conversione può perdere dati ed è accettabile.
 
-## <a name="remarks"></a>Note
+## <a name="remarks"></a>Osservazioni
 
 - Questa regola è implementata solo per static_casts. L'uso di cast di tipo C è in genere sconsigliato.
 
