--- a/docs/code-quality/c26475.md
+++ b/docs/code-quality/c26475.md
@@ -7,20 +7,20 @@ f1_keywords:
 helpviewer_keywords:
 - C26475
 ms.assetid: 4ed71cf8-f155-4961-b4fe-77feb3b880c3
-ms.openlocfilehash: 73b279361e4a3402e248abd7870c741de0167244
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 510bb89d844bdb1b2e0505934034d587ebcef397
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77416870"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88842702"
 ---
 # <a name="c26475-no_function_style_casts"></a>NO_FUNCTION_STYLE_CASTS C26475
 
 "Non usare i cast C di tipo funzione".
 
-Linee guida di base: es. 49: se è necessario usare un cast, usare un cast denominato **C++**
+**Linee guida di base di C++**: [es. 49](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#es49-if-you-must-use-a-cast-use-a-named-cast): se è necessario usare un cast, usare un cast denominato
 
-I cast di tipo funzione (ad esempio, `int(1.1)`) sono un'altra incarnazione di cast di tipo C, come `(int)1.1`, che hanno una sicurezza discutibile. In particolare, il compilatore non tenta di verificare se si verificano perdite di dati nei cast di tipo C o nei cast di funzione. In entrambi i casi, è preferibile evitare di eseguire il cast o usare l'inizializzatore di parentesi graffe, se possibile. Se nessuno dei due funziona, i cast statici potrebbero essere appropriati, ma è comunque preferibile usare le utilità della libreria di supporto delle linee guida:
+I cast di tipo funzione (ad esempio, `int(1.1)` ) sono un'altra incarnazione di cast di tipo C (come `(int)1.1` ), che hanno una sicurezza discutibile. In particolare, il compilatore non tenta di verificare se si verificano perdite di dati nei cast di tipo C o nei cast di funzione. In entrambi i casi, è preferibile evitare di eseguire il cast o usare l'inizializzatore di parentesi graffe, se possibile. Se nessuno dei due funziona, i cast statici potrebbero essere appropriati, ma è comunque preferibile usare le utilità della libreria di supporto delle linee guida:
 
 - GSL:: Narrow garantisce la conversione senza perdita di perdite e causa un arresto anomalo della fase di esecuzione, se non è possibile.
 - GSL:: narrow_cast indica chiaramente che la conversione può perdere dati ed è accettabile.
@@ -28,7 +28,7 @@ I cast di tipo funzione (ad esempio, `int(1.1)`) sono un'altra incarnazione di c
 ## <a name="remarks"></a>Osservazioni
 
 - Questa regola viene attivata solo per le costanti di tipi primitivi. Questi sono i casi in cui il compilatore può rilevare chiaramente la perdita di dati e generare un errore se viene usato l'inizializzatore di parentesi graffe. I casi che richiedono l'esecuzione in fase di esecuzione sono contrassegnati da C26493 NO_CSTYLE_CAST.
-- Gli inizializzatori predefiniti non sono contrassegnati, ad esempio `int()`.
+- Gli inizializzatori predefiniti non sono contrassegnati (ad esempio `int()` ).
 
 ## <a name="example"></a>Esempio
 
