commit translated contents

--- a/docs/code-quality/c26426.md
+++ b/docs/code-quality/c26426.md
@@ -7,18 +7,18 @@ f1_keywords:
 helpviewer_keywords:
 - C26426
 ms.assetid: 6fb5f6d2-b097-47f8-8b49-f2fd4e9bef0e
-ms.openlocfilehash: 0d8bcb80286be699bef5b4836c6fd861616ce351
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 8abfceefc018120646d372f9d30f1269538a0667
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77417185"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88844054"
 ---
 # <a name="c26426-no_global_init_calls"></a>NO_GLOBAL_INIT_CALLS C26426
 
 "L'inizializzatore globale chiama una funzione non constExpr".
 
-Linee guida di base: I. 22: evitare l'inizializzazione complessa degli oggetti globali **C++**
+**Linee guida di base di C++**: [I. 22](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#i22-avoid-complex-initialization-of-global-objects): evitare l'inizializzazione complessa degli oggetti globali
 
 L'ordine di esecuzione degli inizializzatori per gli oggetti globali può essere incoerente o non definito. Questo può causare problemi difficili da riprodurre ed esaminare. Per evitare tali problemi, gli inizializzatori globali non devono dipendere da codice esterno eseguito in fase di esecuzione e possono potenzialmente dipendere da dati non ancora inizializzati. Questa regola contrassegna i casi in cui gli oggetti globali chiamano funzioni per ottenere i valori iniziali.
 
