--- a/docs/code-quality/c26429.md
+++ b/docs/code-quality/c26429.md
@@ -7,34 +7,34 @@ f1_keywords:
 helpviewer_keywords:
 - C26429
 ms.assetid: 4e1c74d5-7307-436c-927b-f74ae863282c
-ms.openlocfilehash: 9645ceb5b1b80365c1fcc7f59655ba4fb649a196
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 86fb5c6c2d11819ae502a856eafede63a9b02672
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81359475"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88843859"
 ---
-# <a name="c26429-use_notnull"></a>C26429 USE_NOTNULL
+# <a name="c26429-use_notnull"></a>USE_NOTNULL C26429
 
-"Simbolo non è mai testato per nullness, può essere contrassegnato come gsl::not_null."
+"Il simbolo non viene mai testato per il supporto di valori null. può essere contrassegnato come GSL:: not_null."
 
-**Linee guida**di base : F.23: Utilizzare un> T not_null\<per indicare che "null" non è un valore valido
+**Linee guida di base di C++**: [F. 23](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f23-use-a-not_nullt-to-indicate-that-null-is-not-a-valid-value): usare un NOT_NULL \<T> per indicare che "null" non è un valore valido
 
-È una pratica comune usare le asserzioni per applicare presupposti sulla validità dei valori del puntatore. Il problema con le asserzioni è che non espongono presupposti tramite l'interfaccia (ad esempio nei tipi restituiti o nei parametri). Anche le asserzioni sono più difficili da gestire e mantenere sincronizzate con altre modifiche al codice. Si consiglia di utilizzare gsl::not_null dalla libreria di supporto delle linee guida come indicatore di risorse che non devono mai avere un valore null. La regola USE_NOTNULL consente di identificare le posizioni che ometta la presenza di valori null e pertanto può essere aggiornata per utilizzare gsl::not_null.
+È prassi comune usare le asserzioni per applicare presupposti sulla validità dei valori di puntatore. Il problema con le asserzioni consiste nel fatto che non espongono presupposti tramite l'interfaccia (ad esempio in tipi restituiti o parametri). Anche le asserzioni sono più difficili da gestire e mantenere sincronizzate con altre modifiche al codice. Si consiglia di usare GSL:: not_null dalla libreria di supporto delle linee guida come marcatore di risorse che non devono mai avere un valore null. La regola USE_NOTNULL consente di identificare le posizioni che omettono i controlli per verificare la presenza di valori null e quindi possono essere aggiornati per l'uso di GSL:: not_null.
 
 ## <a name="remarks"></a>Osservazioni
 
-- La logica della regola richiede che il codice dereferenzi una variabile puntatore in modo che il controllo del valore null (o l'imposizione di un valore non null) venga giustificato. Pertanto, l'avviso verrà generato solo se i puntatori vengono dereferenziati e non vengono mai testati per il valore null.
-  - L'implementazione corrente gestisce solo i puntatori semplici (o i relativi alias) e non rileva i puntatori intelligenti anche se gsl::not_null può essere applicato anche ai puntatori intelligenti.
-  - Una variabile viene contrassegnata come controllata come nullness quando viene utilizzata nei contesti seguenti:A variable is marked as checked for nullness when it is used in the following contexts:
-  - come espressione di simbolo in una condizione di ramo, ad esempio "if (p) : ...
+- Per la logica della regola è necessario il codice per dereferenziare una variabile puntatore, in modo che sia giustificato il controllo del valore null (o l'imposizione di un valore non null). Quindi, l'avviso viene generato solo se i puntatori vengono dereferenziati e non vengono mai testati per il null.
+  - L'implementazione corrente gestisce solo puntatori semplici (o i relativi alias) e non rileva i puntatori intelligenti anche se GSL:: not_null può essere applicato anche ai puntatori intelligenti.
+  - Una variabile viene contrassegnata come verificata come null quando viene utilizzata nei contesti seguenti:
+  - come espressione simbolo in una condizione di ramo, ad esempio "if (p) {...}";
   - operazioni logiche non bit per bit;
   - operazioni di confronto in cui un operando è un'espressione costante che restituisce zero.
-  - La regola non dispone di il rilevamento completo del flusso di dati e può produrre risultati non corretti nei casi in cui vengono utilizzati controlli indiretti (ad esempio quando la variabile intermedia contiene un valore null e successivamente utilizzata in confronto).
+  - La regola non dispone del rilevamento completo del flusso di dati e può produrre risultati non corretti nei casi in cui vengono utilizzati controlli indiretti, ad esempio quando la variabile intermedia contiene un valore null e successivamente utilizzata nel confronto.
 
 ## <a name="example"></a>Esempio
 
-aspettativa nascosta
+previsione nascosta
 
 ```cpp
 using client_collection = gsl::span<client*>;
@@ -51,7 +51,7 @@ void keep_alive(const connection *connection)   // C26429
 }
 ```
 
-aspettativa nascosta – chiarito da gsl::not_null
+previsione nascosta: chiarita da GSL:: not_null
 
 ```cpp
 using client_collection = gsl::span<gsl::not_null<client*>>;
