--- a/docs/code-quality/c26430.md
+++ b/docs/code-quality/c26430.md
@@ -7,37 +7,37 @@ f1_keywords:
 helpviewer_keywords:
 - C26430
 ms.assetid: 3dca2626-8102-4eed-8ff3-73eb3d5c328c
-ms.openlocfilehash: 73f69b54d7f4635be6fb67099b2864ea3882eb24
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 0d781f6f588ec9a7e461d662a4d1cc94034c2fa4
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81316898"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88843846"
 ---
 # <a name="c26430-test_on_all_paths"></a>C26430 TEST_ON_ALL_PATHS
 
-"Simbolo non è testato per nullità su tutti i percorsi."
+"Il simbolo non viene testato per i valori null in tutti i percorsi".
 
-**Linee guida**di base : F.23: Utilizzare un> T not_null\<per indicare che "null" non è un valore valido
+**Linee guida di base di C++**: [F. 23](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f23-use-a-not_nullt-to-indicate-that-null-is-not-a-valid-value): usare un NOT_NULL \<T> per indicare che "null" non è un valore valido
 
-Se il codice controlla la nullità delle variabili puntatore deve eseguire questa operazione in modo coerente e convalidare i puntatori in tutti i percorsi. A volte il controllo troppo aggressivo per la nullità è ancora meglio della possibilità di un crash duro in uno dei rami complicati. Idealmente tale codice dovrebbe essere sottoposto a refactoring per essere meno complesso (dividendo in più funzioni) e fare affidamento su marcatori come gsl::not_null (vedere Libreria di supporto delle linee guida) per isolare parti dell'algoritmo che possono rendere sicuro il presupposto sui valori validi del puntatore. La regola TEST_ON_ALL_PATHS consente di individuare le posizioni in cui i controlli di nullità sono incoerenti (quindi i presupposti possono richiedere la revisione) o i bug effettivi in cui il potenziale valore null può ignorare il controllo di nullità in alcuni dei percorsi del codice.
+Se il codice controlla un valore null delle variabili del puntatore, deve eseguire questa operazione in modo coerente e convalidare i puntatori su tutti i percorsi. In alcuni casi l'eccessiva aggressività del controllo del valore null è ancora migliore rispetto alla possibilità di un arresto anomalo del sistema in uno dei rami complessi. Idealmente, è consigliabile eseguire il refactoring di tale codice in modo che sia meno complesso (suddividendo in più funzioni) e basandosi su marcatori come GSL:: not_null (vedere la libreria di supporto delle linee guida) per isolare le parti dell'algoritmo che possono prendere ipotesi sicure sui valori di puntatore validi. La regola TEST_ON_ALL_PATHS consente di individuare le posizioni in cui i controlli dei valori null sono incoerenti (pertanto è possibile che i presupposti richiedano la revisione) o i bug effettivi in cui il potenziale valore null può ignorare il controllo dei valori null in alcuni percorsi di codice.
 
 ## <a name="remarks"></a>Osservazioni
 
-- Questa regola prevede che il codice dereferenzia una variabile puntatore in modo che il controllo di nullità (o l'applicazione di un valore non null) sarebbe giustificato. Se non è presente alcuna dereferenziazione, la regola viene sospesa.
-  - L'implementazione corrente gestisce solo i puntatori semplici (o i relativi alias) e non rileva i puntatori intelligenti anche se i controlli di nullità sono applicabili anche ai puntatori intelligenti.
-  - Una variabile viene contrassegnata come controllata come nullness quando viene utilizzata nei contesti seguenti:A variable is marked as checked for nullness when it is used in the following contexts:
-  - come espressione di simbolo in una condizione di ramo, ad esempio "if (p) : ...
+- Questa regola prevede che il codice dereferenzia una variabile puntatore in modo da giustificare il controllo del valore null (o l'imposizione di un valore non null). Se non è presente alcuna dereferenziazione, la regola viene sospesa.
+  - L'implementazione corrente gestisce solo puntatori semplici (o i relativi alias) e non rileva i puntatori intelligenti anche se i controlli null sono applicabili anche ai puntatori intelligenti.
+  - Una variabile viene contrassegnata come verificata come null quando viene utilizzata nei contesti seguenti:
+  - come espressione simbolo in una condizione di ramo, ad esempio "if (p) {...}";
   - operazioni logiche non bit per bit;
   - operazioni di confronto in cui un operando è un'espressione costante che restituisce zero.
-  - La regola non dispone di il rilevamento completo del flusso di dati e può produrre risultati non corretti nei casi in cui vengono utilizzati controlli indiretti (ad esempio quando la variabile intermedia contiene un valore null e successivamente utilizzata in confronto).
-  - I controlli di nullità impliciti vengono considerati quando il valore del puntatore viene assegnato da:Implicit nullness checks are assumed when pointer value is assigned from:
-  - un'allocazione eseguita con l'operatore di lancio new;
-  - un puntatore ottenuto dal tipo contrassegnato con gsl::not_null.
+  - La regola non dispone del rilevamento completo del flusso di dati e può produrre risultati non corretti nei casi in cui vengono utilizzati controlli indiretti, ad esempio quando la variabile intermedia contiene un valore null e successivamente utilizzata nel confronto.
+  - Quando il valore del puntatore viene assegnato da, vengono presupposti controlli di Null impliciti:
+  - allocazione eseguita con la generazione dell'operatore New;
+  - puntatore ottenuto dal tipo contrassegnato con GSL:: not_null.
 
 ## <a name="example"></a>Esempio
 
-test incoerenti rivela un errore logico
+il test incoerente rivela un errore logico
 
 ```cpp
 void merge_states(const state *left, const state *right) // C26430
@@ -53,7 +53,7 @@ void merge_states(const state *left, const state *right) // C26430
 }
 ```
 
-test incoerenti rivela un errore logico - corretto
+il test incoerente rivela errori logici-con correzione
 
 ```cpp
 void merge_states(gsl::not_null<const state *> left, gsl::not_null<const state *> right)
