--- a/docs/code-quality/c26431.md
+++ b/docs/code-quality/c26431.md
@@ -7,32 +7,32 @@ f1_keywords:
 helpviewer_keywords:
 - C26431
 ms.assetid: 40be6032-c8de-49ab-8e43-e8eedc0ca0ba
-ms.openlocfilehash: 1be7c1c8ce26a40848c07b4e7f71e2f3da944386
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 23b74af137d7d20e2e60f3ea63f34fd2195dff58
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81365650"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88843820"
 ---
 # <a name="c26431-dont_test_notnull"></a>C26431 DONT_TEST_NOTNULL
 
-"Il tipo di espressione è già gsl::not_null. Non provarlo per la nullità."
+"Il tipo di espressione è già GSL:: not_null. Non testarlo per il supporto di valori null ".
 
-**Linee guida**di base : F.23: Utilizzare un> T not_null\<per indicare che "null" non è un valore valido
+**Linee guida di base di C++**: [F. 23](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f23-use-a-not_nullt-to-indicate-that-null-is-not-a-valid-value): usare un NOT_NULL \<T> per indicare che "null" non è un valore valido
 
-Il tipo di marcatore gsl::not_null dalla libreria di supporto delle linee guida viene utilizzato per indicare chiaramente i valori che non sono mai puntatori null. Causa un errore rigido se tale presupposto non viene mantenuto in fase di esecuzione. Quindi, ovviamente, non è necessario verificare la presenza di valori Null se expression restituisce un risultato di tipo gsl::not_null.
+Il tipo di marcatore GSL:: not_null dalla libreria di supporto delle linee guida viene usato per indicare chiaramente i valori che non sono mai puntatori null. Causa un errore hardware se tale presupposto non viene mantenuto in fase di esecuzione. Ovviamente, non è necessario verificare la presenza di valori null se l'espressione restituisce un risultato di tipo GSL:: not_null.
 
 ## <a name="remarks"></a>Osservazioni
 
-- Poiché gsl::not_null stesso è una classe wrapper puntatore sottile, la regola tiene effettivamente traccia delle variabili temporanee che contengono i risultati delle chiamate all'operatore di conversione di overload (che restituisce l'oggetto puntatore contenuto). Tale logica rende questa regola applicabile alle espressioni che coinvolgono le variabili e alla fine hanno il risultato del tipo gsl::not_null. Ma attualmente ignora le espressioni che contengono chiamate di funzione che restituiscono gsl::not_null.
-  - L'euristica corrente per i controlli di nullità rileva i contesti seguenti:Current heuristic for nullness checks detects the following contexts:
-  - espressione di simbolo in una condizione di ramo, ad esempio "if (p) : ...
+- Poiché GSL:: not_null stessa è una classe wrapper del puntatore sottile, la regola tiene traccia delle variabili temporanee che contengono i risultati delle chiamate all'operatore di conversione di overload (che restituisce l'oggetto puntatore contenuto). Questa logica rende questa regola applicabile a espressioni che coinvolgono variabili e che infine hanno come risultato il tipo GSL:: not_null. Ma attualmente ignora le espressioni che contengono chiamate di funzione che restituiscono GSL:: not_null.
+  - L'euristica corrente per i controlli di nullità rileva i contesti seguenti:
+  - espressione simbolo in una condizione di ramo, ad esempio "if (p) {...}";
   - operazioni logiche non bit per bit;
   - operazioni di confronto in cui un operando è un'espressione costante che restituisce zero.
 
 ## <a name="example"></a>Esempio
 
-controlli nulli non necessari rivelano logica discutibile
+i controlli null non necessari rivelano la logica discutibile
 
 ```cpp
 class type {
@@ -63,7 +63,7 @@ public:
 };
 ```
 
-controlli nulli non necessari rivelano logica discutibile - rielaborato
+i controlli null non necessari rivelano la logica discutibile
 
 ```cpp
     //...
