--- a/docs/code-quality/c26432.md
+++ b/docs/code-quality/c26432.md
@@ -1,5 +1,6 @@
 ---
 title: C26432
+description: Avviso di analisi del codice Microsoft C++ C26432 per la Linee guida di base di C++ Case C. 21.
 ms.date: 11/15/2017
 ms.topic: conceptual
 f1_keywords:
@@ -7,29 +8,59 @@ f1_keywords:
 helpviewer_keywords:
 - C26432
 ms.assetid: f587b05a-5c69-4176-baa6-fcb79d228b24
-ms.openlocfilehash: 038c068b2cb37615209f6c3893a33cadcdb48dc4
-ms.sourcegitcommit: c123cc76bb2b6c5cde6f4c425ece420ac733bf70
+ms.openlocfilehash: 1eb1e20e6e85c6514bd4fe347d86781b3e7b34c2
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 04/14/2020
-ms.locfileid: "81365456"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88843807"
 ---
 # <a name="c26432-define_or_delete_special_ops"></a>C26432 DEFINE_OR_DELETE_SPECIAL_OPS
 
-"Se si definisce o si elimina qualsiasi operazione predefinita nel tipo, definirle o eliminarle tutte."
+> `If you define or delete any default operation in the type 'type-name', define or delete them all (c.21).`
 
-**Linee guida**di base : [C.21: Se si definisce o si elimina qualsiasi operazione di default, definire o eliminare tutti](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#c21-if-you-define-or-delete-any-default-operation-define-or-delete-them-all)
+**Linee guida di base di C++**: \
+[C. 21: se si definisce o = Elimina qualsiasi operazione predefinita, definire o = eliminarli tutti](https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines#c21-if-you-define-or-delete-any-default-operation-define-or-delete-them-all)
 
-Si presuppone che operazioni speciali come i costruttori modifichino il comportamento dei tipi in modo che si basino maggiormente sui meccanismi del linguaggio per applicare automaticamente scenari specifici. L'esempio canonico è la gestione delle risorse. Se si definisce in modo esplicito, predefinito o eliminare una di queste operazioni speciali, segnala che si desidera evitare qualsiasi gestione speciale di un tipo. È incoerente lasciare le altre operazioni non specificate, ovvero definite in modo implicito come eliminate dal compilatore.
+Si presuppone che le operazioni speciali, ad esempio i costruttori, modifichino il comportamento dei tipi in modo che si basino maggiormente sui meccanismi di linguaggio per applicare automaticamente scenari specifici. L'esempio canonico è la gestione delle risorse. Se si definisce, imposta o Elimina in modo esplicito una di queste operazioni speciali, viene segnalato che si desidera evitare una gestione speciale di un tipo. Non è coerente lasciare le altre operazioni non specificate, ovvero definite in modo implicito come eliminate dal compilatore.
 
 ## <a name="remarks"></a>Osservazioni
 
-- Questo controllo implementa "la regola di cinque" che considera speciali le seguenti operazioni:
-  - copiare i costruttori;
-  - spostare i costruttori;
-  - operatori di assegnazione di copia;
-  - operatori di assegnazione di spostamento;
-  - Distruttori.
-- La regola non controlla se le operazioni sono definite nello stesso modo. È possibile combinare le operazioni eliminate e predefinite con operazioni definite in modo esplicito. Tuttavia, è necessario specificarli tutti se si specifica uno di essi.
-- I livelli di accesso non sono importanti e possono anche essere mescolati.
+- Questo controllo implementa la *regola di cinque*, che tratta le operazioni seguenti come speciali:
+  - costruttori di copia,
+  - costruttori di spostamento,
+  - operatori di assegnazione di copia,
+  - operatori di assegnazione di spostamento e
+  - distruttori.
+- La regola non controlla se le operazioni sono definite nello stesso modo. È bene combinare le operazioni eliminate e impostate come predefinite con quelle definite in modo esplicito. Tuttavia, è necessario specificarli tutti se ne viene specificato uno.
+- I livelli di accesso non sono importanti e possono anche essere combinati.
 - L'avviso contrassegna la prima definizione di funzione non statica di un tipo, una volta per tipo.
+
+## <a name="example"></a>Esempio
+
+In questo esempio, `warning::S` definisce solo un costruttore predefinito e un distruttore. La `no_warning::S` dichiarazione definisce tutte e cinque le funzioni membro speciali.
+
+```cpp
+// C26432.cpp
+namespace warning
+{
+    struct S
+    {
+        S() noexcept {}
+        ~S() {} // C26432 because only the constructor and destructor are explicitly defined.
+    };
+}
+
+namespace no_warning
+{
+    struct S
+    {
+        S() noexcept {}
+        S(const S& s) = default;
+        S(S&& s) = default;
+        S& operator=(const S& s) = default;
+        S& operator=(S&& s) = default;
+        ~S() {}
+    };
+}
+```
