--- a/docs/code-quality/c26434.md
+++ b/docs/code-quality/c26434.md
@@ -1,35 +1,57 @@
 ---
 title: C26434
-ms.date: 11/15/2017
+description: Avviso di analisi del codice Microsoft C++ C26434 per la Linee guida di base di C++ Case C. 128.
+ms.date: 08/21/2020
 ms.topic: conceptual
 f1_keywords:
 - C26434
 helpviewer_keywords:
 - C26434
 ms.assetid: 7f66477f-da66-444a-a6e3-44513d7d7e31
-ms.openlocfilehash: 1165998581aa30b4768543d485e8b3c45ab950b1
-ms.sourcegitcommit: 7bea0420d0e476287641edeb33a9d5689a98cb98
+ms.openlocfilehash: 9c7582300c9ebc33457d41cf2a542e7501b76cd1
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 02/17/2020
-ms.locfileid: "77418249"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88843781"
 ---
 # <a name="c26434-dont_hide_methods"></a>DONT_HIDE_METHODS C26434
 
-"La funzione nasconde una funzione non virtuale."
+> `Function 'derived::function' hides a non-virtual function 'base::function' (c.128).`
 
-## <a name="c-core-guidelines"></a>C++Linee guida di base
+## <a name="c-core-guidelines"></a>Linee guida di base di C++
 
 [C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri virtuali, di sostituzione o finali](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
 
-L'introduzione di una funzione con lo stesso nome di una funzione non virtuale in una classe base è simile all'introduzione di un nome di variabile che è in conflitto con un nome dell'ambito esterno. Inoltre, se le firme di funzioni non corrispondono, è possibile che l'override previsto venga trasformato in overload. Nel complesso, il nome nascosto è pericoloso e soggetto a errori.
+## <a name="remarks"></a>Osservazioni
 
-## <a name="remarks"></a>Note
+Quando si introduce una funzione con lo stesso nome di una funzione non virtuale in una classe base, è possibile ottenere un comportamento imprevisto. È come l'introduzione di un nome di variabile che è in conflitto con un nome da un ambito esterno. Ad esempio, è possibile che si abbia intenzione di eseguire l'override di una funzione della classe base. Se le firme delle funzioni non corrispondono, è possibile che l'override che si intende trasformare in un overload. In generale, il nome nascosto è pericoloso e soggetto a errori.
+
+Nei controlli delle linee guida principali:
 
 - Vengono controllate solo le funzioni che non eseguono l'override nella classe corrente.
 - Vengono considerate solo le funzioni non virtuali delle classi base.
 - Non viene eseguita alcuna corrispondenza di firma. Gli avvisi vengono generati se i nomi non qualificati corrispondono.
 
-## <a name="see-also"></a>Vedere anche
+## <a name="example"></a>Esempio
 
-[C. 128: le funzioni virtuali devono specificare esattamente uno dei caratteri virtuali, di sostituzione o finali](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md)
+Questo esempio illustra come una classe derivata può nascondere funzioni non virtuali e come le funzioni virtuali consentono entrambi gli overload e le sostituzioni:
+
+```cpp
+// C26434.cpp
+struct Base
+{
+    virtual ~Base() = default;
+    virtual void is_virtual() noexcept {}
+    void not_virtual() noexcept {}
+};
+
+struct Derived : Base
+{
+    void is_virtual() noexcept override {}      // Okay, override existing function
+    virtual void is_virtual(int i) noexcept {}  // Add a virtual overload for function
+    void not_virtual() noexcept {}              // C26434, hides a non-virtual function
+    virtual void not_virtual(int i) noexcept {} // C26434, and parameters ignored
+};
+
+```
