--- a/docs/code-quality/c26438.md
+++ b/docs/code-quality/c26438.md
@@ -7,19 +7,19 @@ f1_keywords:
 helpviewer_keywords:
 - C26438
 ms.assetid: c7b3f59c-fb2f-4816-bda4-0fad23c80d83
-ms.openlocfilehash: 655b22f3a39b7f97d02ec27a3f1e5e93524e444f
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 4750f84ef2b7b92f0c11acae1359db022fb88a1f
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87233873"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88843755"
 ---
 # <a name="c26438-no_goto"></a>NO_GOTO C26438
 
 "Evitare **`goto`** ".
 
 **Linee guida di base di C++**: \
-ES. 76: evitare goto
+[Es. 76](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#es76-avoid-goto): evitare goto
 
 L'uso di **`goto`** è ampiamente considerato una procedura pericolosa e soggetta a errori. È accettabile solo nel codice generato, ad esempio in un parser generato da una grammatica. Con le funzionalità e le utilità moderne di C++ fornite dalla libreria di supporto delle linee guida, è facile evitarle **`goto`** completamente.
 
