--- a/docs/code-quality/c26446.md
+++ b/docs/code-quality/c26446.md
@@ -1,33 +1,58 @@
 ---
 title: C26446
-ms.date: 03/22/2018
+description: Avviso di analisi del codice Microsoft C++ C26446 per i limiti di Linee guida di base di C++ case. 4.
+ms.date: 08/21/2010
 ms.topic: reference
 f1_keywords:
 - C26446
 helpviewer_keywords:
 - C26446
-ms.openlocfilehash: eff94d61f6c792a6ad720a24b049a25d9d354f91
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: ad3e529aa65797bc8b2a2c12b29007844c58e070
+ms.sourcegitcommit: ec6dd97ef3d10b44e0fedaa8e53f41696f49ac7b
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87215075"
+ms.lasthandoff: 08/25/2020
+ms.locfileid: "88843339"
 ---
 # <a name="c26446-use_gsl_at"></a>USE_GSL_AT C26446
 
-Preferisce utilizzare `gsl::at()` invece dell'operatore di indice non controllato.
+> `Prefer to use gsl::at() instead of unchecked subscript operator (bounds.4).`
 
 Linee guida di base di C++: [bounds. 4: non usare funzioni e tipi della libreria standard non associati](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#probounds-bounds-safety-profile).
 
-Il profilo dei limiti del Linee guida di base di C++ tenta di eliminare le manipolazioni non sicure della memoria evitando l'utilizzo di puntatori non elaborati e di operazioni non controllate. Un modo per eseguire l'accesso uniforme ai buffer con controllo dell'intervallo consiste nell'usare l' `gsl::at()` utilità dalla libreria di supporto delle linee guida. È inoltre consigliabile fare affidamento sulle implementazioni standard di `at()` disponibili nei contenitori STL.
+## <a name="remarks"></a>Osservazioni
 
-Questa regola consente di individuare le posizioni in cui l'accesso potenzialmente non verificato viene eseguito tramite chiamate a Operator \[ ] (). Nella maggior parte dei casi queste chiamate possono essere facilmente sostituite da `gsl::at()` .
+Il profilo dei limiti del Linee guida di base di C++ tenta di eliminare le manipolazioni non sicure della memoria. Consente di evitare l'utilizzo di puntatori non elaborati e di operazioni non controllate. Un modo per eseguire l'accesso uniforme ai buffer con controllo dell'intervallo consiste nell'usare l' `gsl::at()` utilità dalla libreria di supporto delle linee guida. È inoltre consigliabile fare affidamento sulle implementazioni standard di `at()` disponibili nei contenitori STL.
 
-- L'accesso alle matrici con dimensioni note viene contrassegnato quando si utilizza un indice non costante in un operatore di pedice. Gli indici costanti vengono gestiti da [C26483 STATIC_INDEX_OUT_OF_RANGE](c26483.md).
-- La logica di avviso per le chiamate operator [] di overload è più complessa:
-  - Se l'indice non è integrale, la chiamata viene ignorata. Questa operazione gestisce anche l'indicizzazione nelle mappe standard perché i parametri in tali operatori vengono passati per riferimento.
-  - Se l'operatore è contrassegnato come senza generazione (usando **`noexcept`** , **throw ()** o **`__declspec(nothrow)`** ), la chiamata viene contrassegnata. Si presuppone che se l'operatore di indice non genera mai eccezioni, non esegue controlli di intervallo o questi controlli sono oscuri.
-  - Se l'operatore non è contrassegnato come senza generazione, può essere contrassegnato se deriva da un contenitore STL che definisce anche una `at()` funzione membro convenzionale (tali funzioni vengono rilevate dalla corrispondenza dei nomi semplice).
-  - La regola non avverte le chiamate alle `at()` funzioni standard. Queste funzioni sono sicure e sostituite con `gsl::at()` non porteranno molto valore.
-- L'indicizzazione in `std::basic_string_view<>` non è sicura, quindi viene emesso un avviso. La visualizzazione stringa standard può essere sostituita da `gsl::basic_string_span<>` , che è sempre controllata.
-- L'implementazione non considera i controlli di intervallo che il codice utente può avere in un ciclo o in rami. L'accuratezza è negoziata per le prestazioni. In generale, i controlli di intervallo espliciti possono spesso essere sostituiti con iteratori più affidabili o cicli for più concisi.
+Questa regola consente di individuare le posizioni in cui l'accesso potenzialmente non verificato viene eseguito tramite chiamate a `operator[]` . Nella maggior parte dei casi, è possibile sostituire tali chiamate usando `gsl::at()` .
+
+- L'accesso a matrici di dimensioni note viene contrassegnato quando si utilizza un indice non costante in un operatore di pedice. Gli indici costanti vengono gestiti da [C26483 STATIC_INDEX_OUT_OF_RANGE](c26483.md).
+- La logica di avviso per le chiamate in overload `operator[]` è più complessa:
+  - Se l'indice non è integrale, la chiamata viene ignorata. Questa operazione gestisce anche l'indicizzazione nelle mappe standard, perché i parametri in tali operatori vengono passati per riferimento.
+  - Se l'operatore è contrassegnato come non di generazione (usando **`noexcept`** , **`throw()`** o **`__declspec(nothrow)`** ), la chiamata è contrassegnata. Si presuppone che se l'operatore di indice non genera mai eccezioni, non esegue controlli di intervallo o questi controlli sono oscuri.
+  - Se l'operatore non è contrassegnato come senza generazione, può essere contrassegnato se deriva da un contenitore STL che definisce anche una `at()` funzione membro convenzionale. Tali funzioni vengono rilevate dalla corrispondenza semplice dei nomi.
+  - La regola non avverte le chiamate alle `at()` funzioni standard. Queste funzioni sono sicure; la sostituzione con `gsl::at()` non porterebbe molto valore.
+- L'indicizzazione in non `std::basic_string_view<>` è sicura, quindi viene emesso un avviso. Sostituire lo standard `string_view` utilizzando `gsl::basic_string_span<>` , che è sempre selezionato.
+- L'implementazione non considera i controlli di intervallo che il codice utente può avere in un ciclo o in rami. L'accuratezza è negoziata per le prestazioni. In generale, è spesso possibile sostituire i controlli di intervallo espliciti usando iteratori più affidabili o cicli avanzati più concisi **`for`** .
+
+## <a name="example"></a>Esempio
+
+In questo esempio viene illustrato come la `gsl::at` funzione può sostituire un riferimento indicizzato:
+
+```cpp
+// C26446.cpp
+#include <vector>
+#include <gsl/gsl_util>
+#include <iostream>
+
+void fn()
+{
+    std::vector<int> v{1, 2, 3, 4, 5};
+  
+    // Normal bracket operators do not prevent you from accessing memory out of bounds.
+    std::cout << v[5] << '\n';  // C26446, prefer using gsl::at instead of using operator[]. 
+  
+    // gsl::at prevents accessing memory out of bounds and invokes std::terminate on access.
+    std::cout << gsl::at(v, 5) << '\n'; 
+}
+```
