commit translated contents

--- a/docs/code-quality/c6242.md
+++ b/docs/code-quality/c6242.md
@@ -1,28 +1,29 @@
 ---
 title: C6242
-ms.date: 11/04/2016
+description: Descrive C6242 di avviso del compilatore Microsoft C/C++.
+ms.date: 08/24/2020
 ms.topic: reference
 f1_keywords:
 - C6242
 helpviewer_keywords:
 - C6242
 ms.assetid: 523d46ce-8370-434c-a752-2e3a18cca9a5
-ms.openlocfilehash: 6cb1e877c156b78825bb119717a723e0a0435e93
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: a7b2b16689314c06afc47937cabc7c77dfb9f91e
+ms.sourcegitcommit: efc8c32205c9d610f40597556273a64306dec15d
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87229246"
+ms.lasthandoff: 08/26/2020
+ms.locfileid: "88898652"
 ---
 # <a name="c6242"></a>C6242
 
 > avviso C6242: un salto da questo blocco try impone la rimozione locale. Riduzione delle prestazioni gravi
 
-Questo avviso indica che un'istruzione Jump fa in modo che il flusso di controllo lasci il blocco protetto di un try-finally diverso da.
+Questo avviso indica che un'istruzione Jump fa in modo che il flusso di controllo lasci il blocco protetto di un oggetto `try-finally` diverso da quello di.
 
-Se si lascia il blocco protetto di un try-finally diverso dal passaggio dall'ultima istruzione, viene richiesta la rimozione locale. La rimozione locale richiede in genere circa 1000 istruzioni del computer; Pertanto, è dannoso per le prestazioni.
+Se si lascia il blocco protetto di un oggetto `try-finally` diverso da mediante l'esecuzione dell'ultima istruzione, viene richiesta la rimozione locale. La rimozione locale richiede in genere circa 1000 istruzioni della macchina, quindi è dannoso per le prestazioni.
 
-Usare **' __leave** per uscire dal blocco protetto di un try-finally.
+Usare **`__leave`** per uscire dal blocco protetto di un try-finally.
 
 ## <a name="example"></a>Esempio
 
@@ -52,7 +53,7 @@ int f( )
 }
 ```
 
-Per correggere il problema, usare **' __leave** come illustrato nel codice seguente:
+Per correggere il problema, usare **`__leave`** come illustrato nel codice seguente:
 
 ```cpp
 #include <malloc.h>
@@ -82,8 +83,9 @@ int f()
 }
 ```
 
-L'uso di malloc e Free presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare completamente questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria STL (Standard Template Library) di C++. Sono inclusi [shared_ptr](/cpp/standard-library/shared-ptr-class), [unique_ptr](/cpp/standard-library/unique-ptr-class)e [vector](/cpp/standard-library/vector). Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
+L'uso di `malloc` e `free` presenta molti problemi in termini di perdite di memoria ed eccezioni. Per evitare il totale di questi tipi di perdite e problemi di eccezione, utilizzare i meccanismi forniti dalla libreria standard C++. Sono inclusi [`shared_ptr`](/cpp/standard-library/shared-ptr-class) , [`unique_ptr`](/cpp/standard-library/unique-ptr-class) e [`vector`](/cpp/standard-library/vector) . Per altre informazioni, vedere [puntatori intelligenti](/cpp/cpp/smart-pointers-modern-cpp) e [libreria standard C++](/cpp/standard-library/cpp-standard-library-reference).
 
 ## <a name="see-also"></a>Vedere anche
 
-[Istruzione try-finally](/cpp/cpp/try-finally-statement)
+[`try-except` istruzione](/cpp/cpp/try-except-statement)\
+[`try-finally` istruzione](/cpp/cpp/try-finally-statement)
