commit translated contents

--- a/docs/code-quality/c26447.md
+++ b/docs/code-quality/c26447.md
@@ -1,27 +1,53 @@
 ---
 title: C26447
-ms.date: 03/22/2018
+description: Avviso di analisi del codice Microsoft C++ C26447 per la Linee guida di base di C++ case F. 6.
+ms.date: 08/25/2020
 ms.topic: reference
 f1_keywords:
 - C26447
 helpviewer_keywords:
 - C26447
-ms.openlocfilehash: 573fe8436dba907c88dc35537fca2c6f1be49329
-ms.sourcegitcommit: 1f009ab0f2cc4a177f2d1353d5a38f164612bdb1
+ms.openlocfilehash: 3776a2eefbc4ef331ee19edc5e0df1d5cc5c5fdd
+ms.sourcegitcommit: 7f378314c5692d897ead10b7f6c96d4cb2abd266
 ms.translationtype: MT
 ms.contentlocale: it-IT
-ms.lasthandoff: 07/27/2020
-ms.locfileid: "87215062"
+ms.lasthandoff: 08/27/2020
+ms.locfileid: "88972660"
 ---
 # <a name="c26447-dont_throw_in_noexcept"></a>DONT_THROW_IN_NOEXCEPT C26447
 
-La funzione viene dichiarata **`noexcept`** ma chiama una funzione che può generare eccezioni.
+> La funzione viene dichiarata `noexcept` ma chiama la funzione *function_name* che può generare eccezioni (f. 6).
 
-Linee guida di base di C++: [F. 6: se non è possibile generare la funzione, dichiararla noexcept](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f6-if-your-function-may-not-throw-declare-it-noexcept).
+Linee guida di base di C++: \
+[F. 6: se la funzione non può generare, dichiararla noexcept](https://github.com/isocpp/CppCoreGuidelines/blob/master/CppCoreGuidelines.md#f6-if-your-function-may-not-throw-declare-it-noexcept).
 
-Questa regola modifica un'altra regola, [C26440 DECLARE_NOEXCEPT](c26440.md), che tenta di trovare funzioni che sono candidati validi per essere contrassegnati come **`noexcept`** . In questo caso, l'idea è che, una volta che una funzione è contrassegnata come **`noexcept`** , deve mantenerne il contratto non richiamando altro codice che può generare eccezioni.
+## <a name="remarks"></a>Osservazioni
+
+Questa regola modifica un'altra regola, [C26440 DECLARE_NOEXCEPT](c26440.md), che tenta di trovare funzioni che sono candidati validi per contrassegnare come **`noexcept`** . In questo caso, l'idea è che, una volta contrassegnata una funzione come **`noexcept`** , deve mantenerne il contratto non richiamando altro codice che può generare eccezioni.
 
 - Il compilatore Microsoft C++ gestisce già violazioni semplici come **`throw`** le istruzioni nel corpo della funzione (vedere [C4297](/cpp/error-messages/compiler-warnings/compiler-warning-level-1-c4297)).
-- La regola si concentra solo sulle chiamate di funzione. Contrassegna le destinazioni che non sono **`constexpr`** e che potenzialmente possono generare eccezioni; in altre parole, non vengono contrassegnate in modo esplicito come non generate mediante **`noexcept`** , **`__declspec(nothrow)`** , **throw ()**.
+- La regola si concentra solo sulle chiamate di funzione. Contrassegna le destinazioni che non sono **`constexpr`** e che potenzialmente possono generare eccezioni. In altre parole, non vengono contrassegnate in modo esplicito come non generate tramite **`noexcept`** , **`__declspec(nothrow)`** o **throw ()**.
 - Le funzioni di destinazione generate dal compilatore vengono ignorate per ridurre il rumore poiché le specifiche di eccezione non vengono sempre fornite dal compilatore.
-- Il controllo ignora inoltre tipi speciali di funzioni di destinazione che dovrebbero essere implementate come. **`noexcept`** questa regola viene applicata da [C26439 SPECIAL_NOEXCEPT](c26439.md).
+- Il controllo Ignora anche i tipi speciali di funzioni di destinazione che si prevede di implementare come. **`noexcept`** questa regola viene applicata da [C26439 SPECIAL_NOEXCEPT](c26439.md).
+
+## <a name="example"></a>Esempio
+
+```cpp
+#include <vector>
+#include <string>
+#include <istream>
+
+std::vector<std::string> collect(std::istream& is) noexcept 
+{
+    std::vector<std::string> res;
+    for (std::string s; is >> s;) // C26447, `operator bool()` can  throw, std::string's allocator can throw
+        res.push_back(s);         // C26447, `push_back` can throw
+    return res;
+}
+```
+
+È possibile correggere questi avvisi rimuovendo **`noexcept`** dalla firma della funzione.
+
+## <a name="see-also"></a>Vedere anche
+
+[DECLARE_NOEXCEPT C26440](c26440.md)
